--- a/Automaton/Netflix_Scrapper.ipynb
+++ b/Automaton/Netflix_Scrapper.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "def make_soup(url):\n",
-    "    return BeautifulSoup(requests.get(url).text, 'html.parser')"
+    "    return BeautifulSoup(requests.get(url).text, \"html.parser\")"
    ]
   },
   {
@@ -38,24 +38,26 @@
    "outputs": [],
    "source": [
     "def browseCategory(category, data):\n",
-    "    category_url = data[category-1][2]\n",
-    "    category = data[category-1][1]\n",
+    "    category_url = data[category - 1][2]\n",
+    "    category = data[category - 1][1]\n",
     "    subCategory_details = []\n",
     "    count = 1\n",
     "    subCategories = []\n",
     "    soup = make_soup(category_url)\n",
-    "    cards_list = soup.find_all('section',{'class':'nm-collections-row'})\n",
+    "    cards_list = soup.find_all(\"section\", {\"class\": \"nm-collections-row\"})\n",
     "    for card in cards_list:\n",
     "        try:\n",
-    "            subCategory = card.find('h1').text\n",
+    "            subCategory = card.find(\"h1\").text\n",
     "            movie_list = []\n",
-    "            movies = card.find_all('li')\n",
+    "            movies = card.find_all(\"li\")\n",
     "            movie_count = 1\n",
     "            for movie in movies:\n",
     "                try:\n",
-    "                    movie_title = movie.find('span',{'class':'nm-collections-title-name'}).text\n",
-    "                    movie_link = movie.find('a').get('href')\n",
-    "                    movie_list.append([movie_count, movie_title , movie_link])\n",
+    "                    movie_title = movie.find(\n",
+    "                        \"span\", {\"class\": \"nm-collections-title-name\"}\n",
+    "                    ).text\n",
+    "                    movie_link = movie.find(\"a\").get(\"href\")\n",
+    "                    movie_list.append([movie_count, movie_title, movie_link])\n",
     "                    movie_count += 1\n",
     "                except AttributeError:\n",
     "                    pass\n",
@@ -64,7 +66,7 @@
     "            count += 1\n",
     "        except AttributeError:\n",
     "            pass\n",
-    "    return subCategories, subCategory_details, count-1"
+    "    return subCategories, subCategory_details, count - 1"
    ]
   },
   {
@@ -75,18 +77,18 @@
    "source": [
     "def getCategories(base_url):\n",
     "    category_soup = make_soup(base_url)\n",
-    "    categories = category_soup.find_all('section',{'class':'nm-collections-row'})\n",
-    "    result=[]\n",
+    "    categories = category_soup.find_all(\"section\", {\"class\": \"nm-collections-row\"})\n",
+    "    result = []\n",
     "    count = 1\n",
     "    for category in categories:\n",
     "        try:\n",
-    "            Title = category.find('span', {'class':'nm-collections-row-name'}).text\n",
-    "            url = category.find('a').get('href')\n",
+    "            Title = category.find(\"span\", {\"class\": \"nm-collections-row-name\"}).text\n",
+    "            url = category.find(\"a\").get(\"href\")\n",
     "            result.append([count, Title, url])\n",
     "            count += 1\n",
     "        except AttributeError:\n",
     "            pass\n",
-    "    #print(result)\n",
+    "    # print(result)\n",
     "    return result"
    ]
   },
@@ -100,17 +102,20 @@
     "    netflix_url = \"https://www.netflix.com/in/browse/genre/839338\"\n",
     "    categories = getCategories(netflix_url)\n",
     "    print(\"Please select one of the category\")\n",
-    "    df = pd.DataFrame(np.array(categories), columns=['Sr.No', 'Title', 'link'])\n",
+    "    df = pd.DataFrame(np.array(categories), columns=[\"Sr.No\", \"Title\", \"link\"])\n",
     "    print(df.to_string(index=False))\n",
-    "    choice = int(input('\\n\\n Please Enter your Choice: \\n'))\n",
+    "    choice = int(input(\"\\n\\n Please Enter your Choice: \\n\"))\n",
     "    subCategories, movieList, count = browseCategory(choice, categories)\n",
     "    for i in range(0, count):\n",
-    "        print(subCategories[i],'\\n\\n')\n",
-    "        subCategory_df = pd.DataFrame(np.array(movieList[i]), columns=['Sr.No', 'Title', 'link'])\n",
+    "        print(subCategories[i], \"\\n\\n\")\n",
+    "        subCategory_df = pd.DataFrame(\n",
+    "            np.array(movieList[i]), columns=[\"Sr.No\", \"Title\", \"link\"]\n",
+    "        )\n",
     "        print(subCategory_df.to_string(index=False))\n",
     "        print(\"\\n\\n\\n\")\n",
-    "    \n",
-    "if __name__ == '__main__':\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
     "    main()"
    ]
   }
