--- a/Automaton/Pushdown_Automata_Implementation.ipynb
+++ b/Automaton/Pushdown_Automata_Implementation.ipynb
@@ -50,20 +50,22 @@
     }
    ],
    "source": [
-    "#stack functions\n",
-    "def push(a,list1):\n",
-    "    #pushing to the stack/adding to the top of the stack\n",
+    "# stack functions\n",
+    "def push(a, list1):\n",
+    "    # pushing to the stack/adding to the top of the stack\n",
     "    list1.append(a)\n",
     "    return 1\n",
     "\n",
+    "\n",
     "def pop(list1):\n",
-    "    #for poping from the stack/removing the top element of the stack\n",
-    "    index=len(list1)-1\n",
-    "    if (index>0):\n",
+    "    # for poping from the stack/removing the top element of the stack\n",
+    "    index = len(list1) - 1\n",
+    "    if index > 0:\n",
     "        list1.pop(index)\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
+    "\n",
     "\n",
     "#    Q={0,1,2,3}\n",
     "#    Sigma={0,1,2}\n",
@@ -71,57 +73,57 @@
     "#    Z=#\n",
     "#    F={2}\n",
     "\n",
-    "#setting the initial stack symbol\n",
-    "stack=['#']\n",
-    "#setting the starting state\n",
-    "state=0\n",
+    "# setting the initial stack symbol\n",
+    "stack = [\"#\"]\n",
+    "# setting the starting state\n",
+    "state = 0\n",
     "\n",
-    "#taking the input\n",
-    "input_string=input('Enter the String:')\n",
+    "# taking the input\n",
+    "input_string = input(\"Enter the String:\")\n",
     "\n",
-    "#performing the operations\n",
-    "l=len(input_string)\n",
-    "i=0\n",
-    "if l%2==0:\n",
-    "    while i<l//2:\n",
-    "        letter=int(input_string[i])\n",
-    "        #print(letter)\n",
-    "        if letter in [1,2]:\n",
-    "            push(letter,stack)\n",
-    "            state=1\n",
-    "            #print(\">state=1\")\n",
-    "        else :\n",
-    "            state=3\n",
-    "            #print(\">1.state=3\")\n",
+    "# performing the operations\n",
+    "l = len(input_string)\n",
+    "i = 0\n",
+    "if l % 2 == 0:\n",
+    "    while i < l // 2:\n",
+    "        letter = int(input_string[i])\n",
+    "        # print(letter)\n",
+    "        if letter in [1, 2]:\n",
+    "            push(letter, stack)\n",
+    "            state = 1\n",
+    "            # print(\">state=1\")\n",
+    "        else:\n",
+    "            state = 3\n",
+    "            # print(\">1.state=3\")\n",
     "            break\n",
-    "        i+=1\n",
-    "    \n",
-    "    while i<l:\n",
-    "        letter=int(input_string[i])\n",
-    "        #print(letter)\n",
-    "        if state==3:\n",
+    "        i += 1\n",
+    "\n",
+    "    while i < l:\n",
+    "        letter = int(input_string[i])\n",
+    "        # print(letter)\n",
+    "        if state == 3:\n",
     "            break\n",
-    "        if letter==0:\n",
-    "            state=2\n",
-    "            #print(\">2.state=2\")\n",
+    "        if letter == 0:\n",
+    "            state = 2\n",
+    "            # print(\">2.state=2\")\n",
     "            pop(stack)\n",
     "        else:\n",
-    "            state=3\n",
-    "            #print(\">2.state=3\")\n",
+    "            state = 3\n",
+    "            # print(\">2.state=3\")\n",
     "            break\n",
-    "        i+=1\n",
+    "        i += 1\n",
     "else:\n",
-    "    state=3\n",
-    "    #print(\"3state=3\")\n",
-    "    \n",
-    "if state==2 and len(stack)!=1:\n",
-    "    state=3\n",
-    "    \n",
-    "#print(state)\n",
-    "#print(len(stack))\n",
+    "    state = 3\n",
+    "    # print(\"3state=3\")\n",
     "\n",
-    "#checking the final state and displaying the result\n",
-    "if(state==2):\n",
+    "if state == 2 and len(stack) != 1:\n",
+    "    state = 3\n",
+    "\n",
+    "# print(state)\n",
+    "# print(len(stack))\n",
+    "\n",
+    "# checking the final state and displaying the result\n",
+    "if state == 2:\n",
     "    print(\"The String is accepted\")\n",
     "else:\n",
     "    print(\"The String is rejected\")"
