--- a/Automaton/ScrapNewsfromIndiaToday.ipynb
+++ b/Automaton/ScrapNewsfromIndiaToday.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "def make_soup(url):\n",
-    "    return BeautifulSoup(requests.get(url).text, 'html.parser')"
+    "    return BeautifulSoup(requests.get(url).text, \"html.parser\")"
    ]
   },
   {
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.indiatoday.in/top-stories'\n",
-    "indiatoday = 'https://www.indiatoday.in'"
+    "url = \"https://www.indiatoday.in/top-stories\"\n",
+    "indiatoday = \"https://www.indiatoday.in\""
    ]
   },
   {
@@ -38,17 +38,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_stories = make_soup(url).find_all('div',{'class':'catagory-listing'})\n",
+    "top_stories = make_soup(url).find_all(\"div\", {\"class\": \"catagory-listing\"})\n",
     "articles_list = []\n",
     "for story in top_stories:\n",
-    "    image = story.find('img')['src']\n",
-    "    title = story.find('a').text\n",
-    "    story_soup = make_soup(indiatoday + story.find('a')['href'])\n",
-    "    brief = story.find('p').text\n",
-    "    \n",
+    "    image = story.find(\"img\")[\"src\"]\n",
+    "    title = story.find(\"a\").text\n",
+    "    story_soup = make_soup(indiatoday + story.find(\"a\")[\"href\"])\n",
+    "    brief = story.find(\"p\").text\n",
+    "\n",
     "    article = []\n",
-    "    for description in story_soup.find_all('div',{'class':'description'}): \n",
-    "        for paragraph in description.find_all('p'):\n",
+    "    for description in story_soup.find_all(\"div\", {\"class\": \"description\"}):\n",
+    "        for paragraph in description.find_all(\"p\"):\n",
     "            article.append(paragraph.text)\n",
     "\n",
     "    articles_list.append([title, brief, article, image])"
@@ -60,7 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(articles_list, columns=['Title', 'Brief Intro', 'Paragraph', 'Image Url'])"
+    "df = pd.DataFrame(\n",
+    "    articles_list, columns=[\"Title\", \"Brief Intro\", \"Paragraph\", \"Image Url\"]\n",
+    ")"
    ]
   }
  ],
