--- a/machine_learning/ARIMA/ARIMA with pyramid.ipynb
+++ b/machine_learning/ARIMA/ARIMA with pyramid.ipynb
@@ -33,7 +33,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -75,7 +76,7 @@
    "source": [
     "# split data by percentage\n",
     "split_percentage = 80\n",
-    "train_size = int(ds_temp.shape[0]*(split_percentage/100))\n",
+    "train_size = int(ds_temp.shape[0] * (split_percentage / 100))\n",
     "train, test = train_test_split(ds_temp, train_size=train_size)"
    ]
   },
@@ -86,13 +87,17 @@
    "outputs": [],
    "source": [
     "# split data by year\n",
-    "train_start_date = '1900-01-01'\n",
-    "train_end_date = '1999-12-01'\n",
-    "test_start_date = '2000-01-01'\n",
-    "test_end_date = '2015-12-01'\n",
+    "train_start_date = \"1900-01-01\"\n",
+    "train_end_date = \"1999-12-01\"\n",
+    "test_start_date = \"2000-01-01\"\n",
+    "test_end_date = \"2015-12-01\"\n",
     "\n",
-    "train = df[(df[\"dt\"] >= train_start_date) & (df[\"dt\"] <= train_end_date)][\"LandAverageTemperature\"]\n",
-    "test = df[(df[\"dt\"] >= test_start_date) & (df[\"dt\"] <= test_end_date)][\"LandAverageTemperature\"]"
+    "train = df[(df[\"dt\"] >= train_start_date) & (df[\"dt\"] <= train_end_date)][\n",
+    "    \"LandAverageTemperature\"\n",
+    "]\n",
+    "test = df[(df[\"dt\"] >= test_start_date) & (df[\"dt\"] <= test_end_date)][\n",
+    "    \"LandAverageTemperature\"\n",
+    "]"
    ]
   },
   {
@@ -290,8 +295,8 @@
    "source": [
     "# Visualize the forecasts (green=train, blue=forecasts)\n",
     "x = np.arange(train.shape[0] + test.shape[0])\n",
-    "plt.plot(x[:train.shape[0]], train, c='green')\n",
-    "plt.plot(x[train.shape[0]:], forecasts, c='blue')\n",
+    "plt.plot(x[: train.shape[0]], train, c=\"green\")\n",
+    "plt.plot(x[train.shape[0] :], forecasts, c=\"blue\")\n",
     "plt.show()"
    ]
   },
@@ -316,8 +321,8 @@
    "source": [
     "# Compare forecasts and real values (green=test, blue=forecasts)\n",
     "x = np.arange(test.shape[0])\n",
-    "plt.plot(x, test, c='green', alpha=0.5)\n",
-    "plt.plot(x, forecasts, c='blue', alpha=0.5)\n",
+    "plt.plot(x, test, c=\"green\", alpha=0.5)\n",
+    "plt.plot(x, forecasts, c=\"blue\", alpha=0.5)\n",
     "plt.show()"
    ]
   },
