--- a/machine_learning/Associative Mining/Association.ipynb
+++ b/machine_learning/Associative Mining/Association.ipynb
@@ -41,7 +41,7 @@
     "from mlxtend.frequent_patterns import apriori\n",
     "\n",
     "df = pd.read_csv(\"grocery_data.csv\")\n",
-    "data = list(df[\"products\"].apply(lambda x:x.split(',')))\n",
+    "data = list(df[\"products\"].apply(lambda x: x.split(\",\")))\n",
     "data"
    ]
   },
@@ -424,7 +424,7 @@
     "te = TransactionEncoder()\n",
     "\n",
     "te_data = te.fit(data).transform(data).astype(\"int\")\n",
-    "df = pd.DataFrame(te_data,columns=te.columns_)\n",
+    "df = pd.DataFrame(te_data, columns=te.columns_)\n",
     "df\n",
     "# df.to_csv(\"transformed_data.csv\", encoding='utf-8', index=False)"
    ]
@@ -905,9 +905,9 @@
     }
    ],
    "source": [
-    "apriori_data = apriori(df,min_support=0.01,use_colnames=True)\n",
-    "apriori_data.sort_values(by=\"support\",ascending=False)\n",
-    "apriori_data['length'] = apriori_data['itemsets'].apply(lambda x:len(x))\n",
+    "apriori_data = apriori(df, min_support=0.01, use_colnames=True)\n",
+    "apriori_data.sort_values(by=\"support\", ascending=False)\n",
+    "apriori_data[\"length\"] = apriori_data[\"itemsets\"].apply(lambda x: len(x))\n",
     "\n",
     "apriori_data"
    ]
@@ -1210,7 +1210,7 @@
     }
    ],
    "source": [
-    "apriori_data[(apriori_data['length']==2) & (apriori_data['support']>=0.05)]"
+    "apriori_data[(apriori_data[\"length\"] == 2) & (apriori_data[\"support\"] >= 0.05)]"
    ]
   },
   {
