--- a/machine_learning/Cosine-Similarity/Similarity.ipynb
+++ b/machine_learning/Cosine-Similarity/Similarity.ipynb
@@ -9,14 +9,17 @@
     "import pandas as pd\n",
     "from math import sqrt, pow\n",
     "import matplotlib.pyplot as plt\n",
-    " \n",
-    "def euclidean_distance(x,y):\n",
-    "    return sqrt(sum(pow(a-b,2) for a, b in zip(x, y)))\n",
     "\n",
-    "def manhattan_distance(x,y):\n",
-    "    return sum(abs(a-b) for a,b in zip(x,y))\n",
     "\n",
-    "data = pd.read_csv('data.csv')"
+    "def euclidean_distance(x, y):\n",
+    "    return sqrt(sum(pow(a - b, 2) for a, b in zip(x, y)))\n",
+    "\n",
+    "\n",
+    "def manhattan_distance(x, y):\n",
+    "    return sum(abs(a - b) for a, b in zip(x, y))\n",
+    "\n",
+    "\n",
+    "data = pd.read_csv(\"data.csv\")"
    ]
   },
   {
@@ -39,13 +42,17 @@
    ],
    "source": [
     "# Draw Graph\n",
-    "x = data[data['Gender']=='Male'].plot(kind='scatter', x= 'Height',y = 'Weight',color='blue',figsize=(10,7))\n",
-    "data[data['Gender']=='Female'].plot(kind='scatter',x= 'Height',y = 'Weight',color='pink',figsize=(10,7) ,ax=x)\n",
+    "x = data[data[\"Gender\"] == \"Male\"].plot(\n",
+    "    kind=\"scatter\", x=\"Height\", y=\"Weight\", color=\"blue\", figsize=(10, 7)\n",
+    ")\n",
+    "data[data[\"Gender\"] == \"Female\"].plot(\n",
+    "    kind=\"scatter\", x=\"Height\", y=\"Weight\", color=\"pink\", figsize=(10, 7), ax=x\n",
+    ")\n",
     "\n",
-    "plt.xlabel('Height')\n",
-    "plt.ylabel('weight')\n",
-    "plt.title('Analyze Height and Weight of men and women')\n",
-    "plt.legend(labels=['Males','Females'])\n",
+    "plt.xlabel(\"Height\")\n",
+    "plt.ylabel(\"weight\")\n",
+    "plt.title(\"Analyze Height and Weight of men and women\")\n",
+    "plt.legend(labels=[\"Males\", \"Females\"])\n",
     "plt.show()"
    ]
   },
@@ -66,34 +73,41 @@
    ],
    "source": [
     "# Retrieving all heights and weights\n",
-    "heights = data['Height']\n",
-    "weights = data['Weight']\n",
+    "heights = data[\"Height\"]\n",
+    "weights = data[\"Weight\"]\n",
     "\n",
-    "# Calculating Euclidean Distance \n",
+    "# Calculating Euclidean Distance\n",
     "euclidean_result = euclidean_distance(heights, weights)\n",
     "\n",
-    "# Calculating Manhattan Distance \n",
+    "# Calculating Manhattan Distance\n",
     "manhattan_result = manhattan_distance(heights, weights)\n",
     "\n",
-    "# To get value between 0 and 1 \n",
+    "# To get value between 0 and 1\n",
     "euclidean_result = 1 / (1 + euclidean_result)\n",
     "manhattan_result = 1 / (1 + manhattan_result)\n",
     "\n",
     "# Checking if the similarity value is nearest to 0 or 1\n",
     "# Eucliean Distance\n",
     "if round(euclidean_result) == 0:\n",
-    "    print(f\"This is no similarity using Euclidean Distance between heights and weights for this dataset with similarity value = {euclidean_result}\")\n",
+    "    print(\n",
+    "        f\"This is no similarity using Euclidean Distance between heights and weights for this dataset with similarity value = {euclidean_result}\"\n",
+    "    )\n",
     "else:\n",
-    "    print(f\"This is similarity using Euclidean Distance between heights and weights for this dataset with similarity value = {euclidean_result}\")\n",
+    "    print(\n",
+    "        f\"This is similarity using Euclidean Distance between heights and weights for this dataset with similarity value = {euclidean_result}\"\n",
+    "    )\n",
     "\n",
-    "print('------------------------------------------------------')\n",
+    "print(\"------------------------------------------------------\")\n",
     "\n",
     "# Manhattan Distance\n",
     "if round(manhattan_result) == 0:\n",
-    "    print(f\"This is no similarity using Manhattan Distance between heights and weights for this dataset with similarity value = {manhattan_result}\")\n",
+    "    print(\n",
+    "        f\"This is no similarity using Manhattan Distance between heights and weights for this dataset with similarity value = {manhattan_result}\"\n",
+    "    )\n",
     "else:\n",
-    "    print(f\"This is similarity using Manhattan Distance between heights and weights for this dataset with similarity value = {manhattan_result}\")\n",
-    "\n"
+    "    print(\n",
+    "        f\"This is similarity using Manhattan Distance between heights and weights for this dataset with similarity value = {manhattan_result}\"\n",
+    "    )"
    ]
   },
   {
