--- a/machine_learning/Decision Tree regression with k-fold cross validation/k-fold cross-validation of decision tree regression.ipynb
+++ b/machine_learning/Decision Tree regression with k-fold cross validation/k-fold cross-validation of decision tree regression.ipynb
@@ -2404,7 +2404,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
-    "sns.set(color_codes = True)\n",
+    "sns.set(color_codes=True)\n",
     "# Load the data into data frame according to the file where you save it\n",
     "\n",
     "happiness = pd.read_csv(\"c://2019.csv\")\n",
@@ -4532,26 +4532,32 @@
    "source": [
     "# Rename the columns to make it more easy to understand\n",
     "\n",
-    "happiness = happiness.rename(columns = {'Overall rank': 'Rank', 'Country or region': 'Country', \n",
-    "                                        'GDP per capita': 'Economy (GDP per Capita)', 'Social support': 'Social Support', \n",
-    "                                        'Healthy life expectancy': 'Health (Life Expectancy)', \n",
-    "                                        'Freedom to make life choices': 'Freedom',\n",
-    "                                        'Perceptions of corruption': 'Perception of Corruption'})\n",
+    "happiness = happiness.rename(\n",
+    "    columns={\n",
+    "        \"Overall rank\": \"Rank\",\n",
+    "        \"Country or region\": \"Country\",\n",
+    "        \"GDP per capita\": \"Economy (GDP per Capita)\",\n",
+    "        \"Social support\": \"Social Support\",\n",
+    "        \"Healthy life expectancy\": \"Health (Life Expectancy)\",\n",
+    "        \"Freedom to make life choices\": \"Freedom\",\n",
+    "        \"Perceptions of corruption\": \"Perception of Corruption\",\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "#cleaning null value and inconsistent data\n",
-    "happiness.drop(index=86,axis=0 , inplace=True)\n",
-    "happiness.drop(index=96,axis=0 , inplace=True)\n",
-    "happiness.drop(index=98,axis=0 , inplace=True)\n",
-    "happiness.drop(index=111,axis=0 , inplace=True)\n",
-    "happiness.drop(index=117,axis=0 , inplace=True)\n",
-    "happiness.drop(index=119,axis=0 , inplace=True)\n",
-    "happiness.drop(index=125,axis=0 , inplace=True)\n",
-    "happiness.drop(index=134,axis=0 , inplace=True)\n",
-    "happiness.drop(index=147,axis=0 , inplace=True)\n",
+    "# cleaning null value and inconsistent data\n",
+    "happiness.drop(index=86, axis=0, inplace=True)\n",
+    "happiness.drop(index=96, axis=0, inplace=True)\n",
+    "happiness.drop(index=98, axis=0, inplace=True)\n",
+    "happiness.drop(index=111, axis=0, inplace=True)\n",
+    "happiness.drop(index=117, axis=0, inplace=True)\n",
+    "happiness.drop(index=119, axis=0, inplace=True)\n",
+    "happiness.drop(index=125, axis=0, inplace=True)\n",
+    "happiness.drop(index=134, axis=0, inplace=True)\n",
+    "happiness.drop(index=147, axis=0, inplace=True)\n",
     "\n",
     "# Dropping the unimportant columns\n",
     "\n",
-    "happiness.drop(['Rank'], axis = 1)"
+    "happiness.drop([\"Rank\"], axis=1)"
    ]
   },
   {
@@ -4629,7 +4635,7 @@
    ],
    "source": [
     "# Drop the missing values.\n",
-    "happiness = happiness.dropna() \n",
+    "happiness = happiness.dropna()\n",
     "happiness.count()"
    ]
   },
@@ -4677,16 +4683,26 @@
    "source": [
     "# Decision Tree Regression\n",
     "\n",
-    "x = pd.DataFrame(np.c_[happiness['Economy (GDP per Capita)'], happiness['Social Support'], happiness['Health (Life Expectancy)']], \n",
-    "                 columns = ['Economy (GDP per Capita)','Social Support','Health (Life Expectancy)'])\n",
-    "y = happiness['Score']\n",
+    "x = pd.DataFrame(\n",
+    "    np.c_[\n",
+    "        happiness[\"Economy (GDP per Capita)\"],\n",
+    "        happiness[\"Social Support\"],\n",
+    "        happiness[\"Health (Life Expectancy)\"],\n",
+    "    ],\n",
+    "    columns=[\"Economy (GDP per Capita)\", \"Social Support\", \"Health (Life Expectancy)\"],\n",
+    ")\n",
+    "y = happiness[\"Score\"]\n",
     "\n",
     "# split the data using train_test_split\n",
     "from sklearn.model_selection import train_test_split\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state=42)\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.2, random_state=42\n",
+    ")\n",
     "\n",
     "# build the model\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
     "regressor = DecisionTreeRegressor()\n",
     "\n",
     "# Fitting Decision Tree Regression into dataset\n",
@@ -4695,7 +4711,7 @@
     "y_pred = regressor.predict(x_test)\n",
     "\n",
     "# test the accuracy/performance measurement using R2\n",
-    "print('R2: ', regressor.score(x_test, y_test))"
+    "print(\"R2: \", regressor.score(x_test, y_test))"
    ]
   },
   {
@@ -4923,7 +4939,7 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame({'Real Values':y_test, 'Predicted Values':y_pred})\n",
+    "df = pd.DataFrame({\"Real Values\": y_test, \"Predicted Values\": y_pred})\n",
     "df"
    ]
   },
@@ -4944,14 +4960,14 @@
     }
    ],
    "source": [
-    "# Visualising the Decision Tree Regression Results \n",
+    "# Visualising the Decision Tree Regression Results\n",
     "\n",
     "X_grid = np.arange(0, 10)\n",
     "X_grid = X_grid.reshape((len(X_grid), 1))\n",
     "plt.scatter(y_pred, y_test)\n",
-    "plt.title('Decision Tree Regression')\n",
-    "plt.xlabel('Predicted Score')\n",
-    "plt.ylabel('Score')\n",
+    "plt.title(\"Decision Tree Regression\")\n",
+    "plt.xlabel(\"Predicted Score\")\n",
+    "plt.ylabel(\"Score\")\n",
     "plt.show()"
    ]
   },
@@ -4973,6 +4989,7 @@
    ],
    "source": [
     "from sklearn import metrics\n",
+    "\n",
     "mse = metrics.mean_squared_error(y_test, y_pred)\n",
     "mse"
    ]
@@ -4994,14 +5011,20 @@
     "# k-fold cross validation of decision tree regression\n",
     "\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "\n",
     "regressor = DecisionTreeRegressor()\n",
     "\n",
-    "first_cv_scores = cross_val_score(regressor, x, y, cv=5, scoring='neg_mean_squared_error')\n",
-    "second_cv_scores = cross_val_score(regressor, x, y, cv=10, scoring='neg_mean_squared_error')\n",
-    "print('mean in first_cv_scores is {0:.2f} and in second_cv_scores is {1:.2f}'.format(np.mean\n",
-    "(first_cv_scores),\n",
-    " np.mean\n",
-    "(second_cv_scores)))\n",
+    "first_cv_scores = cross_val_score(\n",
+    "    regressor, x, y, cv=5, scoring=\"neg_mean_squared_error\"\n",
+    ")\n",
+    "second_cv_scores = cross_val_score(\n",
+    "    regressor, x, y, cv=10, scoring=\"neg_mean_squared_error\"\n",
+    ")\n",
+    "print(\n",
+    "    \"mean in first_cv_scores is {0:.2f} and in second_cv_scores is {1:.2f}\".format(\n",
+    "        np.mean(first_cv_scores), np.mean(second_cv_scores)\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# neg_mean_squared_error is better when close to 0.0"
    ]
