--- a/machine_learning/House_Price_Prediction.ipynb
+++ b/machine_learning/House_Price_Prediction.ipynb
@@ -31,9 +31,11 @@
     "import numpy as np\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline \n",
+    "\n",
+    "%matplotlib inline\n",
     "import matplotlib\n",
-    "matplotlib.rcParams[\"figure.figsize\"]=(20,10)"
+    "\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = (20, 10)"
    ]
   },
   {
@@ -194,7 +196,7 @@
     }
    ],
    "source": [
-    "df1.groupby('area_type')['area_type'].agg('count')"
+    "df1.groupby(\"area_type\")[\"area_type\"].agg(\"count\")"
    ]
   },
   {
@@ -203,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df1.drop(['area_type','society','balcony','availability'] , axis=\"columns\")"
+    "df2 = df1.drop([\"area_type\", \"society\", \"balcony\", \"availability\"], axis=\"columns\")"
    ]
   },
   {
@@ -382,7 +384,7 @@
     }
    ],
    "source": [
-    "df2['size'].unique()"
+    "df2[\"size\"].unique()"
    ]
   },
   {
@@ -418,7 +420,7 @@
     }
    ],
    "source": [
-    "df3['bhk'] = df3['size'].apply(lambda x: int(x.split(' ')[0]))"
+    "df3[\"bhk\"] = df3[\"size\"].apply(lambda x: int(x.split(\" \")[0]))"
    ]
   },
   {
@@ -439,7 +441,7 @@
     }
    ],
    "source": [
-    "df3['bhk'].unique()"
+    "df3[\"bhk\"].unique()"
    ]
   },
   {
@@ -511,7 +513,7 @@
     }
    ],
    "source": [
-    "df3[df3.bhk>20]"
+    "df3[df3.bhk > 20]"
    ]
   },
   {
@@ -698,7 +700,7 @@
     }
    ],
    "source": [
-    "df3[~df3['total_sqft'].apply(is_float)].head(10)"
+    "df3[~df3[\"total_sqft\"].apply(is_float)].head(10)"
    ]
   },
   {
@@ -715,14 +717,13 @@
    "outputs": [],
    "source": [
     "def convert_sqft_to_num(x):\n",
-    "    tokens = x.split('-')\n",
+    "    tokens = x.split(\"-\")\n",
     "    if len(tokens) == 2:\n",
-    "        return (float(tokens[0]) + float(tokens[1]))/2\n",
+    "        return (float(tokens[0]) + float(tokens[1])) / 2\n",
     "    try:\n",
     "        return float(x)\n",
     "    except:\n",
-    "        return None\n",
-    "        "
+    "        return None"
    ]
   },
   {
@@ -732,7 +733,7 @@
    "outputs": [],
    "source": [
     "df4 = df3.copy()\n",
-    "df4['total_sqft'] = df4['total_sqft'].apply(convert_sqft_to_num)"
+    "df4[\"total_sqft\"] = df4[\"total_sqft\"].apply(convert_sqft_to_num)"
    ]
   },
   {
@@ -757,7 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5['price_per_sqft'] = df5['price']*100000/df5['total_sqft']"
+    "df5[\"price_per_sqft\"] = df5[\"price\"] * 100000 / df5[\"total_sqft\"]"
    ]
   },
   {
@@ -802,7 +803,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_stats = df5.groupby('location')['location'].agg('count').sort_values(ascending=False)"
+    "location_stats = (\n",
+    "    df5.groupby(\"location\")[\"location\"].agg(\"count\").sort_values(ascending=False)\n",
+    ")"
    ]
   },
   {
@@ -854,7 +857,7 @@
     }
    ],
    "source": [
-    "len(location_stats[location_stats<=10])"
+    "len(location_stats[location_stats <= 10])"
    ]
   },
   {
@@ -877,7 +880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_stats_less_10 = location_stats[location_stats<=10]"
+    "location_stats_less_10 = location_stats[location_stats <= 10]"
    ]
   },
   {
@@ -938,7 +941,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5.location = df5.location.apply(lambda x: 'other' if x in location_stats_less_10 else x)"
+    "df5.location = df5.location.apply(\n",
+    "    lambda x: \"other\" if x in location_stats_less_10 else x\n",
+    ")"
    ]
   },
   {
@@ -1195,7 +1200,7 @@
     }
    ],
    "source": [
-    "df5[df5.total_sqft/df5.bhk<300].head()"
+    "df5[df5.total_sqft / df5.bhk < 300].head()"
    ]
   },
   {
@@ -1231,7 +1236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df6 = df5[~(df5.total_sqft/df5.bhk<300)]"
+    "df6 = df5[~(df5.total_sqft / df5.bhk < 300)]"
    ]
   },
   {
@@ -1297,12 +1302,14 @@
    "source": [
     "def remove_pps_outliers(df):\n",
     "    df_out = pd.DataFrame()\n",
-    "    for key, subdf in df.groupby('location'):\n",
+    "    for key, subdf in df.groupby(\"location\"):\n",
     "        m = np.mean(subdf.price_per_sqft)\n",
     "        st = np.std(subdf.price_per_sqft)\n",
-    "        reduced_df = subdf[(subdf.price_per_sqft>(m-st)) & (subdf.price_per_sqft<=(m+st))]\n",
-    "        df_out = pd.concat([df_out,reduced_df],ignore_index=True)\n",
-    "    return df_out    "
+    "        reduced_df = subdf[\n",
+    "            (subdf.price_per_sqft > (m - st)) & (subdf.price_per_sqft <= (m + st))\n",
+    "        ]\n",
+    "        df_out = pd.concat([df_out, reduced_df], ignore_index=True)\n",
+    "    return df_out"
    ]
   },
   {
@@ -1353,18 +1360,21 @@
     }
    ],
    "source": [
-    "def plot_scatter_chart(df,location):\n",
-    "    bhk2 = df[(df.location==location) & (df.bhk==2)]\n",
-    "    bhk3 = df[(df.location==location) & (df.bhk==3)]\n",
-    "    matplotlib.rcParams['figure.figsize'] = (15,10)\n",
-    "    plt.scatter(bhk2.total_sqft,bhk2.price,color='blue',label='2 BHK', s=50)\n",
-    "    plt.scatter(bhk3.total_sqft,bhk3.price,marker='+', color='green',label='3 BHK', s=50)\n",
+    "def plot_scatter_chart(df, location):\n",
+    "    bhk2 = df[(df.location == location) & (df.bhk == 2)]\n",
+    "    bhk3 = df[(df.location == location) & (df.bhk == 3)]\n",
+    "    matplotlib.rcParams[\"figure.figsize\"] = (15, 10)\n",
+    "    plt.scatter(bhk2.total_sqft, bhk2.price, color=\"blue\", label=\"2 BHK\", s=50)\n",
+    "    plt.scatter(\n",
+    "        bhk3.total_sqft, bhk3.price, marker=\"+\", color=\"green\", label=\"3 BHK\", s=50\n",
+    "    )\n",
     "    plt.xlabel(\"Total Square Feet Area\")\n",
     "    plt.ylabel(\"Price (Lakh Indian Rupees)\")\n",
     "    plt.title(location)\n",
     "    plt.legend()\n",
-    "    \n",
-    "plot_scatter_chart(df7,\"Rajaji Nagar\")"
+    "\n",
+    "\n",
+    "plot_scatter_chart(df7, \"Rajaji Nagar\")"
    ]
   },
   {
@@ -1386,7 +1396,7 @@
     }
    ],
    "source": [
-    "plot_scatter_chart(df7,\"Hebbal\")"
+    "plot_scatter_chart(df7, \"Hebbal\")"
    ]
   },
   {
@@ -1397,19 +1407,22 @@
    "source": [
     "def remove_bhk_outliers(df):\n",
     "    exclude_indices = np.array([])\n",
-    "    for location,location_df in df.groupby('location'):\n",
+    "    for location, location_df in df.groupby(\"location\"):\n",
     "        bhk_stats = {}\n",
-    "        for bhk,bhk_df in location_df.groupby('bhk'):\n",
+    "        for bhk, bhk_df in location_df.groupby(\"bhk\"):\n",
     "            bhk_stats[bhk] = {\n",
-    "                'mean':np.mean(bhk_df.price_per_sqft),\n",
-    "                'std':np.std(bhk_df.price_per_sqft),\n",
-    "                'count':bhk_df.shape[0]\n",
+    "                \"mean\": np.mean(bhk_df.price_per_sqft),\n",
+    "                \"std\": np.std(bhk_df.price_per_sqft),\n",
+    "                \"count\": bhk_df.shape[0],\n",
     "            }\n",
-    "        for bhk,bhk_df in location_df.groupby(\"bhk\"):\n",
-    "            stats = bhk_stats.get(bhk-1)\n",
-    "            if stats and stats['count']>5:\n",
-    "                exclude_indices = np.append(exclude_indices,bhk_df[bhk_df.price_per_sqft < (stats['mean'])].index.values)\n",
-    "    return df.drop(exclude_indices,axis='index')       "
+    "        for bhk, bhk_df in location_df.groupby(\"bhk\"):\n",
+    "            stats = bhk_stats.get(bhk - 1)\n",
+    "            if stats and stats[\"count\"] > 5:\n",
+    "                exclude_indices = np.append(\n",
+    "                    exclude_indices,\n",
+    "                    bhk_df[bhk_df.price_per_sqft < (stats[\"mean\"])].index.values,\n",
+    "                )\n",
+    "    return df.drop(exclude_indices, axis=\"index\")"
    ]
   },
   {
@@ -1497,7 +1510,7 @@
     }
    ],
    "source": [
-    "plt.hist(df8.bath,rwidth=0.8)\n",
+    "plt.hist(df8.bath, rwidth=0.8)\n",
     "plt.xlabel(\"Number of bathrooms\")\n",
     "plt.ylabel(\"Count\")"
    ]
@@ -1607,7 +1620,7 @@
     }
    ],
    "source": [
-    "df8[df8.bath>10]"
+    "df8[df8.bath > 10]"
    ]
   },
   {
@@ -1711,7 +1724,7 @@
     }
    ],
    "source": [
-    "df8[df8.bath>df8.bhk + 2]"
+    "df8[df8.bath > df8.bhk + 2]"
    ]
   },
   {
@@ -1939,7 +1952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df10 = df9.drop(['size','price_per_sqft'],axis = 'columns')"
+    "df10 = df9.drop([\"size\", \"price_per_sqft\"], axis=\"columns\")"
    ]
   },
   {
@@ -2289,7 +2302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df11 = pd.concat([df10,dummies],axis = 'columns')"
+    "df11 = pd.concat([df10, dummies], axis=\"columns\")"
    ]
   },
   {
@@ -2298,7 +2311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df11 = df11.drop(['other'],axis = 'columns')"
+    "df11 = df11.drop([\"other\"], axis=\"columns\")"
    ]
   },
   {
@@ -2530,7 +2543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df12 = df11.drop(['location'],axis = 'columns')"
+    "df12 = df11.drop([\"location\"], axis=\"columns\")"
    ]
   },
   {
@@ -2773,7 +2786,7 @@
     }
    ],
    "source": [
-    "df12.shape\n"
+    "df12.shape"
    ]
   },
   {
@@ -2996,7 +3009,7 @@
     }
    ],
    "source": [
-    "X = df12.drop('price',axis='columns')\n",
+    "X = df12.drop(\"price\", axis=\"columns\")\n",
     "X.head()"
    ]
   },
@@ -3039,7 +3052,10 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size = 0.2,random_state = 10)"
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=10\n",
+    ")"
    ]
   },
   {
@@ -3060,9 +3076,10 @@
    ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "lr_clf = LinearRegression()\n",
-    "lr_clf.fit(X_train,y_train)\n",
-    "lr_clf.score(X_test,y_test)"
+    "lr_clf.fit(X_train, y_train)\n",
+    "lr_clf.score(X_test, y_test)"
    ]
   },
   {
@@ -3099,8 +3116,9 @@
    "source": [
     "from sklearn.model_selection import ShuffleSplit\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "cv = ShuffleSplit(n_splits = 5, test_size = 0.2, random_state = 0)\n",
-    "cross_val_score(LinearRegression(),X,y,cv=cv)"
+    "\n",
+    "cv = ShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
+    "cross_val_score(LinearRegression(), X, y, cv=cv)"
    ]
   },
   {
@@ -3186,43 +3204,44 @@
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "def find_best_model_using_gridsearchcv(X,y):\n",
+    "\n",
+    "def find_best_model_using_gridsearchcv(X, y):\n",
     "    algos = {\n",
-    "        'linear_regression' : {\n",
-    "            'model': LinearRegression(),\n",
-    "            'params': {\n",
-    "                'normalize': [True, False]\n",
-    "            }\n",
+    "        \"linear_regression\": {\n",
+    "            \"model\": LinearRegression(),\n",
+    "            \"params\": {\"normalize\": [True, False]},\n",
     "        },\n",
-    "        'lasso': {\n",
-    "            'model': Lasso(),\n",
-    "            'params': {\n",
-    "                'alpha': [1,2],\n",
-    "                'selection': ['random', 'cyclic']\n",
-    "            }\n",
+    "        \"lasso\": {\n",
+    "            \"model\": Lasso(),\n",
+    "            \"params\": {\"alpha\": [1, 2], \"selection\": [\"random\", \"cyclic\"]},\n",
     "        },\n",
-    "        'decision_tree': {\n",
-    "            'model': DecisionTreeRegressor(),\n",
-    "            'params': {\n",
-    "                'criterion' : ['mse','friedman_mse'],\n",
-    "                'splitter': ['best','random']\n",
-    "            }\n",
-    "        }\n",
+    "        \"decision_tree\": {\n",
+    "            \"model\": DecisionTreeRegressor(),\n",
+    "            \"params\": {\n",
+    "                \"criterion\": [\"mse\", \"friedman_mse\"],\n",
+    "                \"splitter\": [\"best\", \"random\"],\n",
+    "            },\n",
+    "        },\n",
     "    }\n",
     "    scores = []\n",
     "    cv = ShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
     "    for algo_name, config in algos.items():\n",
-    "        gs =  GridSearchCV(config['model'], config['params'], cv=cv, return_train_score=False)\n",
-    "        gs.fit(X,y)\n",
-    "        scores.append({\n",
-    "            'model': algo_name,\n",
-    "            'best_score': gs.best_score_,\n",
-    "            'best_params': gs.best_params_\n",
-    "        })\n",
+    "        gs = GridSearchCV(\n",
+    "            config[\"model\"], config[\"params\"], cv=cv, return_train_score=False\n",
+    "        )\n",
+    "        gs.fit(X, y)\n",
+    "        scores.append(\n",
+    "            {\n",
+    "                \"model\": algo_name,\n",
+    "                \"best_score\": gs.best_score_,\n",
+    "                \"best_params\": gs.best_params_,\n",
+    "            }\n",
+    "        )\n",
     "\n",
-    "    return pd.DataFrame(scores,columns=['model','best_score','best_params'])\n",
+    "    return pd.DataFrame(scores, columns=[\"model\", \"best_score\", \"best_params\"])\n",
     "\n",
-    "find_best_model_using_gridsearchcv(X,y)"
+    "\n",
+    "find_best_model_using_gridsearchcv(X, y)"
    ]
   },
   {
@@ -3245,17 +3264,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_price(location,sqft,bath,bhk):\n",
-    "    loc_index = np.where(X.columns==location)[0][0]\n",
-    "    \n",
+    "def predict_price(location, sqft, bath, bhk):\n",
+    "    loc_index = np.where(X.columns == location)[0][0]\n",
+    "\n",
     "    x = np.zeros(len(X.columns))\n",
     "    x[0] = sqft\n",
     "    x[1] = bath\n",
     "    x[2] = bhk\n",
     "    if loc_index >= 0:\n",
     "        x[loc_index] = 1\n",
-    "    return lr_clf.predict([x])[0]    \n",
-    "      "
+    "    return lr_clf.predict([x])[0]"
    ]
   },
   {
@@ -3275,7 +3293,7 @@
     }
    ],
    "source": [
-    "predict_price('1st Phase JP Nagar',1000,2,2)"
+    "predict_price(\"1st Phase JP Nagar\", 1000, 2, 2)"
    ]
   },
   {
@@ -3295,7 +3313,7 @@
     }
    ],
    "source": [
-    "predict_price('Indira Nagar',1000, 3, 3)"
+    "predict_price(\"Indira Nagar\", 1000, 3, 3)"
    ]
   },
   {
