--- a/machine_learning/Naive_Bayes/naive_bayes.ipynb
+++ b/machine_learning/Naive_Bayes/naive_bayes.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(iris.data)\n",
-    "df.columns = [\"sl\", \"sw\", 'pl', 'pw']"
+    "df.columns = [\"sl\", \"sw\", \"pl\", \"pw\"]"
    ]
   },
   {
@@ -147,22 +147,23 @@
    "outputs": [],
    "source": [
     "def label(val, *boundaries):\n",
-    "    if (val < boundaries[0]):\n",
-    "        return 'a'\n",
-    "    elif (val < boundaries[1]):\n",
-    "        return 'b'\n",
-    "    elif (val < boundaries[2]):\n",
-    "        return 'c'\n",
+    "    if val < boundaries[0]:\n",
+    "        return \"a\"\n",
+    "    elif val < boundaries[1]:\n",
+    "        return \"b\"\n",
+    "    elif val < boundaries[2]:\n",
+    "        return \"c\"\n",
     "    else:\n",
-    "        return 'd'\n",
+    "        return \"d\"\n",
+    "\n",
     "\n",
     "def toLabel(df, old_feature_name):\n",
     "    second = df[old_feature_name].mean()\n",
     "    minimum = df[old_feature_name].min()\n",
-    "    first = (minimum + second)/2\n",
+    "    first = (minimum + second) / 2\n",
     "    maximum = df[old_feature_name].max()\n",
-    "    third = (maximum + second)/2\n",
-    "    return df[old_feature_name].apply(label, args= (first, second, third))"
+    "    third = (maximum + second) / 2\n",
+    "    return df[old_feature_name].apply(label, args=(first, second, third))"
    ]
   },
   {
@@ -938,10 +939,10 @@
     }
    ],
    "source": [
-    "df['sl_labeled'] = toLabel(df, 'sl')\n",
-    "df['sw_labeled'] = toLabel(df, 'sw')\n",
-    "df['pl_labeled'] = toLabel(df, 'pl')\n",
-    "df['pw_labeled'] = toLabel(df, 'pw')\n",
+    "df[\"sl_labeled\"] = toLabel(df, \"sl\")\n",
+    "df[\"sw_labeled\"] = toLabel(df, \"sw\")\n",
+    "df[\"pl_labeled\"] = toLabel(df, \"pl\")\n",
+    "df[\"pw_labeled\"] = toLabel(df, \"pw\")\n",
     "df"
    ]
   },
@@ -951,7 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['sl', 'sw', 'pl', 'pw'], axis = 1, inplace = True)"
+    "df.drop([\"sl\", \"sw\", \"pl\", \"pw\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -971,7 +972,7 @@
     }
    ],
    "source": [
-    "set(df['sl_labeled'])"
+    "set(df[\"sl_labeled\"])"
    ]
   },
   {
