--- a/machine_learning/Natural language processing/Named Entity Recognition with Conditional Random Fields.ipynb
+++ b/machine_learning/Natural language processing/Named Entity Recognition with Conditional Random Fields.ipynb
@@ -57,9 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_sents = list(nltk.corpus.conll2002.iob_sents('ned.train'))\n",
-    "dev_sents = list(nltk.corpus.conll2002.iob_sents('ned.testa'))\n",
-    "test_sents = list(nltk.corpus.conll2002.iob_sents('ned.testb'))"
+    "train_sents = list(nltk.corpus.conll2002.iob_sents(\"ned.train\"))\n",
+    "dev_sents = list(nltk.corpus.conll2002.iob_sents(\"ned.testa\"))\n",
+    "test_sents = list(nltk.corpus.conll2002.iob_sents(\"ned.testb\"))"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "    word2cluster = {}\n",
     "    with open(cluster_file) as i:\n",
     "        for line in i:\n",
-    "            word, cluster = line.strip().split('\\t')\n",
+    "            word, cluster = line.strip().split(\"\\t\")\n",
     "            word2cluster[word] = cluster\n",
     "    return word2cluster\n",
     "\n",
@@ -150,73 +150,84 @@
     "    word = sent[i][0]\n",
     "    postag = sent[i][1]\n",
     "    features = [\n",
-    "        'bias',\n",
-    "        'word.lower=' + word.lower(),\n",
-    "        'word[-3:]=' + word[-3:],\n",
-    "        'word[-2:]=' + word[-2:],\n",
-    "        'word.isupper=%s' % word.isupper(),\n",
-    "        'word.istitle=%s' % word.istitle(),\n",
-    "        'word.isdigit=%s' % word.isdigit(),\n",
-    "        'word.cluster=%s' % word2cluster[word.lower()] if word.lower() in word2cluster else \"0\",\n",
-    "        'postag=' + postag\n",
+    "        \"bias\",\n",
+    "        \"word.lower=\" + word.lower(),\n",
+    "        \"word[-3:]=\" + word[-3:],\n",
+    "        \"word[-2:]=\" + word[-2:],\n",
+    "        \"word.isupper=%s\" % word.isupper(),\n",
+    "        \"word.istitle=%s\" % word.istitle(),\n",
+    "        \"word.isdigit=%s\" % word.isdigit(),\n",
+    "        \"word.cluster=%s\" % word2cluster[word.lower()]\n",
+    "        if word.lower() in word2cluster\n",
+    "        else \"0\",\n",
+    "        \"postag=\" + postag,\n",
     "    ]\n",
     "    if i > 0:\n",
-    "        word1 = sent[i-1][0]\n",
-    "        postag1 = sent[i-1][1]\n",
-    "        features.extend([\n",
-    "            '-1:word.lower=' + word1.lower(),\n",
-    "            '-1:word.istitle=%s' % word1.istitle(),\n",
-    "            '-1:word.isupper=%s' % word1.isupper(),\n",
-    "            '-1:postag=' + postag1\n",
-    "        ])\n",
+    "        word1 = sent[i - 1][0]\n",
+    "        postag1 = sent[i - 1][1]\n",
+    "        features.extend(\n",
+    "            [\n",
+    "                \"-1:word.lower=\" + word1.lower(),\n",
+    "                \"-1:word.istitle=%s\" % word1.istitle(),\n",
+    "                \"-1:word.isupper=%s\" % word1.isupper(),\n",
+    "                \"-1:postag=\" + postag1,\n",
+    "            ]\n",
+    "        )\n",
     "    else:\n",
-    "        features.append('BOS')\n",
+    "        features.append(\"BOS\")\n",
     "\n",
-    "    if i > 1: \n",
-    "        word2 = sent[i-2][0]\n",
-    "        postag2 = sent[i-2][1]\n",
-    "        features.extend([\n",
-    "            '-2:word.lower=' + word2.lower(),\n",
-    "            '-2:word.istitle=%s' % word2.istitle(),\n",
-    "            '-2:word.isupper=%s' % word2.isupper(),\n",
-    "            '-2:postag=' + postag2\n",
-    "        ])        \n",
+    "    if i > 1:\n",
+    "        word2 = sent[i - 2][0]\n",
+    "        postag2 = sent[i - 2][1]\n",
+    "        features.extend(\n",
+    "            [\n",
+    "                \"-2:word.lower=\" + word2.lower(),\n",
+    "                \"-2:word.istitle=%s\" % word2.istitle(),\n",
+    "                \"-2:word.isupper=%s\" % word2.isupper(),\n",
+    "                \"-2:postag=\" + postag2,\n",
+    "            ]\n",
+    "        )\n",
     "\n",
-    "        \n",
-    "    if i < len(sent)-1:\n",
-    "        word1 = sent[i+1][0]\n",
-    "        postag1 = sent[i+1][1]\n",
-    "        features.extend([\n",
-    "            '+1:word.lower=' + word1.lower(),\n",
-    "            '+1:word.istitle=%s' % word1.istitle(),\n",
-    "            '+1:word.isupper=%s' % word1.isupper(),\n",
-    "            '+1:postag=' + postag1\n",
-    "        ])\n",
+    "    if i < len(sent) - 1:\n",
+    "        word1 = sent[i + 1][0]\n",
+    "        postag1 = sent[i + 1][1]\n",
+    "        features.extend(\n",
+    "            [\n",
+    "                \"+1:word.lower=\" + word1.lower(),\n",
+    "                \"+1:word.istitle=%s\" % word1.istitle(),\n",
+    "                \"+1:word.isupper=%s\" % word1.isupper(),\n",
+    "                \"+1:postag=\" + postag1,\n",
+    "            ]\n",
+    "        )\n",
     "    else:\n",
-    "        features.append('EOS')\n",
+    "        features.append(\"EOS\")\n",
     "\n",
-    "    if i < len(sent)-2:\n",
-    "        word2 = sent[i+2][0]\n",
-    "        postag2 = sent[i+2][1]\n",
-    "        features.extend([\n",
-    "            '+2:word.lower=' + word2.lower(),\n",
-    "            '+2:word.istitle=%s' % word2.istitle(),\n",
-    "            '+2:word.isupper=%s' % word2.isupper(),\n",
-    "            '+2:postag=' + postag2\n",
-    "        ])\n",
+    "    if i < len(sent) - 2:\n",
+    "        word2 = sent[i + 2][0]\n",
+    "        postag2 = sent[i + 2][1]\n",
+    "        features.extend(\n",
+    "            [\n",
+    "                \"+2:word.lower=\" + word2.lower(),\n",
+    "                \"+2:word.istitle=%s\" % word2.istitle(),\n",
+    "                \"+2:word.isupper=%s\" % word2.isupper(),\n",
+    "                \"+2:postag=\" + postag2,\n",
+    "            ]\n",
+    "        )\n",
     "\n",
-    "        \n",
     "    return features\n",
     "\n",
     "\n",
     "def sent2features(sent, word2cluster):\n",
     "    return [word2features(sent, i, word2cluster) for i in range(len(sent))]\n",
     "\n",
+    "\n",
     "def sent2labels(sent):\n",
     "    return [label for token, postag, label in sent]\n",
     "\n",
+    "\n",
     "def sent2tokens(sent):\n",
     "    return [token for token, postag, label in sent]\n",
+    "\n",
     "\n",
     "word2cluster = read_clusters(\"data/embeddings/clusters_nl.tsv\")"
    ]
@@ -496,11 +507,7 @@
     }
    ],
    "source": [
-    "crf = crfsuite.CRF(\n",
-    "    verbose='true',\n",
-    "    algorithm='lbfgs',\n",
-    "    max_iterations=100\n",
-    ")\n",
+    "crf = crfsuite.CRF(verbose=\"true\", algorithm=\"lbfgs\", max_iterations=100)\n",
     "\n",
     "crf.fit(X_train, y_train, X_dev=X_dev, y_dev=y_dev)"
    ]
@@ -571,9 +578,11 @@
     "\n",
     "example_sent = test_sents[0]\n",
     "\n",
-    "print(\"Sentence:\", ' '.join(sent2tokens(example_sent)))\n",
-    "print(\"Predicted:\", ' '.join(crf.predict([sent2features(example_sent, word2cluster)])[0]))\n",
-    "print(\"Correct:  \", ' '.join(sent2labels(example_sent)))"
+    "print(\"Sentence:\", \" \".join(sent2tokens(example_sent)))\n",
+    "print(\n",
+    "    \"Predicted:\", \" \".join(crf.predict([sent2features(example_sent, word2cluster)])[0])\n",
+    ")\n",
+    "print(\"Correct:  \", \" \".join(sent2labels(example_sent)))"
    ]
   },
   {
@@ -614,10 +623,7 @@
     "labels = list(crf.classes_)\n",
     "labels.remove(\"O\")\n",
     "y_pred = crf.predict(X_test)\n",
-    "sorted_labels = sorted(\n",
-    "    labels,\n",
-    "    key=lambda name: (name[1:], name[0])\n",
-    ")\n",
+    "sorted_labels = sorted(labels, key=lambda name: (name[1:], name[0]))\n",
     "\n",
     "print(metrics.flat_classification_report(y_test, y_pred, labels=sorted_labels))"
    ]
@@ -4441,26 +4447,18 @@
     "from sklearn.metrics import make_scorer\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
-    "crf = crfsuite.CRF(\n",
-    "    algorithm='lbfgs',\n",
-    "    max_iterations=100,\n",
-    "    all_possible_transitions=True\n",
-    ")\n",
+    "crf = crfsuite.CRF(algorithm=\"lbfgs\", max_iterations=100, all_possible_transitions=True)\n",
     "\n",
     "params_space = {\n",
-    "    'c1': scipy.stats.expon(scale=0.5),\n",
-    "    'c2': scipy.stats.expon(scale=0.05),\n",
+    "    \"c1\": scipy.stats.expon(scale=0.5),\n",
+    "    \"c2\": scipy.stats.expon(scale=0.05),\n",
     "}\n",
     "\n",
-    "f1_scorer = make_scorer(metrics.flat_f1_score,\n",
-    "                        average='weighted', labels=labels)\n",
+    "f1_scorer = make_scorer(metrics.flat_f1_score, average=\"weighted\", labels=labels)\n",
     "\n",
-    "rs = RandomizedSearchCV(crf, params_space,\n",
-    "                        cv=3,\n",
-    "                        verbose=1,\n",
-    "                        n_jobs=-1,\n",
-    "                        n_iter=50,\n",
-    "                        scoring=f1_scorer)\n",
+    "rs = RandomizedSearchCV(\n",
+    "    crf, params_space, cv=3, verbose=1, n_jobs=-1, n_iter=50, scoring=f1_scorer\n",
+    ")\n",
     "rs.fit(X_train, y_train)"
    ]
   },
@@ -4487,9 +4485,9 @@
     }
    ],
    "source": [
-    "print('best params:', rs.best_params_)\n",
-    "print('best CV score:', rs.best_score_)\n",
-    "print('model size: {:0.2f}M'.format(rs.best_estimator_.size_ / 1000000))"
+    "print(\"best params:\", rs.best_params_)\n",
+    "print(\"best CV score:\", rs.best_score_)\n",
+    "print(\"model size: {:0.2f}M\".format(rs.best_estimator_.size_ / 1000000))"
    ]
   },
   {
@@ -4529,9 +4527,9 @@
    "source": [
     "best_crf = rs.best_estimator_\n",
     "y_pred = best_crf.predict(X_test)\n",
-    "print(metrics.flat_classification_report(\n",
-    "    y_test, y_pred, labels=sorted_labels, digits=3\n",
-    "))"
+    "print(\n",
+    "    metrics.flat_classification_report(y_test, y_pred, labels=sorted_labels, digits=3)\n",
+    ")"
    ]
   },
   {
