--- a/machine_learning/Numpy/Fundamentals of Numpy.ipynb
+++ b/machine_learning/Numpy/Fundamentals of Numpy.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = [1,2,3]\n",
+    "arr = [1, 2, 3]\n",
     "arr"
    ]
   },
@@ -75,9 +75,9 @@
     }
    ],
    "source": [
-    "my_mat = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "my_mat = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "\n",
-    "my_mat\n"
+    "my_mat"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "source": [
     "# np.arange(start , last , offset)\n",
     "\n",
-    "np.arange(0,10)  "
+    "np.arange(0, 10)"
    ]
   },
   {
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "np.arange(0,5,1)\n"
+    "np.arange(0, 5, 1)"
    ]
   },
   {
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "np.arange(2,12,2)"
+    "np.arange(2, 12, 2)"
    ]
   },
   {
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "# Zeros \n",
+    "# Zeros\n",
     "\n",
     "np.zeros(3)  # one dimensional"
    ]
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "np.zeros((3,3))  # two dimensional"
+    "np.zeros((3, 3))  # two dimensional"
    ]
   },
   {
@@ -289,7 +289,7 @@
     }
    ],
    "source": [
-    "np.ones((2,2))"
+    "np.ones((2, 2))"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "source": [
     "# linspace -> (start , end , how many point u want in between start to end)\n",
     "\n",
-    "np.linspace(0,5,10)"
+    "np.linspace(0, 5, 10)"
    ]
   },
   {
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "# Diagonal element \n",
+    "# Diagonal element\n",
     "\n",
     "np.eye(3)"
    ]
@@ -381,7 +381,7 @@
    "source": [
     "# random -> (number of points in between )\n",
     "\n",
-    "np.random.rand(5)\n"
+    "np.random.rand(5)"
    ]
   },
   {
@@ -403,7 +403,7 @@
     }
    ],
    "source": [
-    "np.random.rand(3,3)    "
+    "np.random.rand(3, 3)"
    ]
   },
   {
@@ -425,7 +425,7 @@
    "source": [
     "# random based on standard normal distrubution\n",
     "\n",
-    "np.random.randn(3)\n"
+    "np.random.randn(3)"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "source": [
     "# random number between start to end anything in interger format\n",
     "\n",
-    "np.random.randint(1,20)"
+    "np.random.randint(1, 20)"
    ]
   },
   {
@@ -467,8 +467,8 @@
     }
    ],
    "source": [
-    "#  start , end , numbers of points in between \n",
-    "np.random.randint(1,20,5)"
+    "#  start , end , numbers of points in between\n",
+    "np.random.randint(1, 20, 5)"
    ]
   },
   {
@@ -488,7 +488,7 @@
     "\n",
     "# we can reshape the arr into 2 dimesional\n",
     "# we can't resize 10 into 2 row and 3 column or anything we have to reshape into row 2 and column 5\n",
-    "                \n",
+    "\n",
     "array = np.arange(10)"
    ]
   },
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "array.reshape(2,5)"
+    "array.reshape(2, 5)"
    ]
   },
   {
@@ -537,11 +537,11 @@
     }
    ],
    "source": [
-    "number = np.random.randint(1,20,5);\n",
+    "number = np.random.randint(1, 20, 5)\n",
     "print(number.max())\n",
     "print(number.min())\n",
     "print(number.argmax())  # return location where max is stored\n",
-    "print(number.argmin())  # return location where min is stored\n"
+    "print(number.argmin())  # return location where min is stored"
    ]
   },
   {
@@ -568,7 +568,7 @@
     }
    ],
    "source": [
-    " array.shape  #because its one dimesional "
+    "array.shape  # because its one dimesional"
    ]
   },
   {
@@ -596,7 +596,7 @@
    ],
    "source": [
     "# type\n",
-    "array.dtype\n"
+    "array.dtype"
    ]
   },
   {
@@ -619,8 +619,8 @@
     "# instead of writing like these -> np.random.randint(1,20)\n",
     "from numpy.random import randint\n",
     "\n",
-    "# then we can directly call randint which will return random number in between 3 to 10 \n",
-    "randint(3,10)"
+    "# then we can directly call randint which will return random number in between 3 to 10\n",
+    "randint(3, 10)"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr_1 = np.arange(1,20)"
+    "arr_1 = np.arange(1, 20)"
    ]
   },
   {
@@ -657,7 +657,7 @@
     }
    ],
    "source": [
-    "arr_1 "
+    "arr_1"
    ]
   },
   {
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "arr_1*10"
+    "arr_1 * 10"
    ]
   },
   {
@@ -782,7 +782,7 @@
     }
    ],
    "source": [
-    "arr_1**2"
+    "arr_1 ** 2"
    ]
   },
   {
@@ -997,8 +997,8 @@
     }
    ],
    "source": [
-    "#Grab Everything from row 2 which is starting from column 1 to onwords\n",
-    "arr_2d[:2,1:]\n"
+    "# Grab Everything from row 2 which is starting from column 1 to onwords\n",
+    "arr_2d[:2, 1:]"
    ]
   },
   {
@@ -1018,7 +1018,7 @@
     }
    ],
    "source": [
-    "arr_2d[1,1:]"
+    "arr_2d[1, 1:]"
    ]
   },
   {
@@ -1069,7 +1069,7 @@
     }
    ],
    "source": [
-    "arr_2d[boolean]  "
+    "arr_2d[boolean]"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
     }
    ],
    "source": [
-    "arr_2d[arr_2d>20]"
+    "arr_2d[arr_2d > 20]"
    ]
   },
   {
