--- a/machine_learning/Prophet/Prophet.ipynb
+++ b/machine_learning/Prophet/Prophet.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={\"dt\":\"ds\", \"LandAverageTemperature\": \"y\"}, inplace=True)"
+    "df.rename(columns={\"dt\": \"ds\", \"LandAverageTemperature\": \"y\"}, inplace=True)"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "split_percentage = 80\n",
-    "train_size = int(df.shape[0]*(split_percentage/100))\n",
+    "train_size = int(df.shape[0] * (split_percentage / 100))\n",
     "train, test = df[:train_size], df[train_size:]"
    ]
   },
@@ -184,11 +184,11 @@
     "m = Prophet()\n",
     "m.fit(train)\n",
     "\n",
-    "future = m.make_future_dataframe(periods=len(test)+1, freq='m', include_history=False)\n",
+    "future = m.make_future_dataframe(periods=len(test) + 1, freq=\"m\", include_history=False)\n",
     "future.tail()\n",
     "\n",
     "forecast = m.predict(future)\n",
-    "forecast[['ds', 'yhat', 'yhat_lower', 'yhat_upper']].tail()"
+    "forecast[[\"ds\", \"yhat\", \"yhat_lower\", \"yhat_upper\"]].tail()"
    ]
   },
   {
@@ -258,10 +258,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_start_date = '1900-01-01'\n",
-    "train_end_date = '1999-12-01'\n",
-    "test_start_date = '2000-01-01'\n",
-    "test_end_date = '2015-12-01'\n",
+    "train_start_date = \"1900-01-01\"\n",
+    "train_end_date = \"1999-12-01\"\n",
+    "test_start_date = \"2000-01-01\"\n",
+    "test_end_date = \"2015-12-01\"\n",
     "\n",
     "train = df[(df[\"ds\"] >= train_start_date) & (df[\"ds\"] <= train_end_date)]\n",
     "test = df[(df[\"ds\"] >= test_start_date) & (df[\"ds\"] <= test_end_date)]"
@@ -374,11 +374,11 @@
     "m = Prophet()\n",
     "m.fit(train)\n",
     "\n",
-    "future = m.make_future_dataframe(periods=len(test)+1, freq='m', include_history=False)\n",
+    "future = m.make_future_dataframe(periods=len(test) + 1, freq=\"m\", include_history=False)\n",
     "future.tail()\n",
     "\n",
     "forecast = m.predict(future)\n",
-    "forecast[['ds', 'yhat', 'yhat_lower', 'yhat_upper']].tail()"
+    "forecast[[\"ds\", \"yhat\", \"yhat_lower\", \"yhat_upper\"]].tail()"
    ]
   },
   {
