--- a/machine_learning/Reuters_one_vs_rest_classifier/reuters_one_vs_rest_classifier.ipynb
+++ b/machine_learning/Reuters_one_vs_rest_classifier/reuters_one_vs_rest_classifier.ipynb
@@ -21,9 +21,7 @@
     "## This code downloads the required packages.\n",
     "## You can run `nltk.download('all')` to download everything.\n",
     "\n",
-    "nltk_packages = [\n",
-    "    (\"reuters\", \"corpora/reuters.zip\")\n",
-    "]\n",
+    "nltk_packages = [(\"reuters\", \"corpora/reuters.zip\")]\n",
     "\n",
     "for pid, fid in nltk_packages:\n",
     "    try:\n",
@@ -61,8 +59,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_documents, train_categories = zip(*[(reuters.raw(i), reuters.categories(i)) for i in reuters.fileids() if i.startswith('training/')])\n",
-    "test_documents, test_categories = zip(*[(reuters.raw(i), reuters.categories(i)) for i in reuters.fileids() if i.startswith('test/')])"
+    "train_documents, train_categories = zip(\n",
+    "    *[\n",
+    "        (reuters.raw(i), reuters.categories(i))\n",
+    "        for i in reuters.fileids()\n",
+    "        if i.startswith(\"training/\")\n",
+    "    ]\n",
+    ")\n",
+    "test_documents, test_categories = zip(\n",
+    "    *[\n",
+    "        (reuters.raw(i), reuters.categories(i))\n",
+    "        for i in reuters.fileids()\n",
+    "        if i.startswith(\"test/\")\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -93,6 +103,8 @@
    "outputs": [],
    "source": [
     "from nltk.stem.porter import PorterStemmer\n",
+    "\n",
+    "\n",
     "def tokenize(text):\n",
     "    tokens = nltk.word_tokenize(text)\n",
     "    stems = []\n",
@@ -135,7 +147,7 @@
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "vectorizer = TfidfVectorizer(tokenizer = tokenize, stop_words = 'english')\n",
+    "vectorizer = TfidfVectorizer(tokenizer=tokenize, stop_words=\"english\")\n",
     "\n",
     "vectorised_train_documents = vectorizer.fit_transform(train_documents)\n",
     "vectorised_test_documents = vectorizer.transform(test_documents)"
@@ -211,8 +223,8 @@
     "%%capture\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
     "\n",
-    "kf = KFold(n_splits=10, random_state = 42, shuffle = True)\n",
-    "scores = cross_val_score(classifier, vectorised_train_documents, train_labels, cv = kf)"
+    "kf = KFold(n_splits=10, random_state=42, shuffle=True)\n",
+    "scores = cross_val_score(classifier, vectorised_train_documents, train_labels, cv=kf)"
    ]
   },
   {
@@ -231,8 +243,12 @@
     }
    ],
    "source": [
-    "print('Cross-validation scores:', scores)\n",
-    "print('Cross-validation accuracy: {:.4f} (+/- {:.4f})'.format(scores.mean(), scores.std() * 2))"
+    "print(\"Cross-validation scores:\", scores)\n",
+    "print(\n",
+    "    \"Cross-validation accuracy: {:.4f} (+/- {:.4f})\".format(\n",
+    "        scores.mean(), scores.std() * 2\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -249,21 +265,27 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score,\n",
+    "    confusion_matrix,\n",
+    ")\n",
     "\n",
     "predictions = classifier.predict(vectorised_test_documents)\n",
     "\n",
     "accuracy = accuracy_score(test_labels, predictions)\n",
     "\n",
-    "macro_precision = precision_score(test_labels, predictions, average='macro')\n",
-    "macro_recall = recall_score(test_labels, predictions, average='macro')\n",
-    "macro_f1 = f1_score(test_labels, predictions, average='macro')\n",
+    "macro_precision = precision_score(test_labels, predictions, average=\"macro\")\n",
+    "macro_recall = recall_score(test_labels, predictions, average=\"macro\")\n",
+    "macro_f1 = f1_score(test_labels, predictions, average=\"macro\")\n",
     "\n",
-    "micro_precision = precision_score(test_labels, predictions, average='micro')\n",
-    "micro_recall = recall_score(test_labels, predictions, average='micro')\n",
-    "micro_f1 = f1_score(test_labels, predictions, average='micro')\n",
+    "micro_precision = precision_score(test_labels, predictions, average=\"micro\")\n",
+    "micro_recall = recall_score(test_labels, predictions, average=\"micro\")\n",
+    "micro_f1 = f1_score(test_labels, predictions, average=\"micro\")\n",
     "\n",
-    "cm = confusion_matrix(test_labels.argmax(axis = 1), predictions.argmax(axis = 1))"
+    "cm = confusion_matrix(test_labels.argmax(axis=1), predictions.argmax(axis=1))"
    ]
   },
   {
@@ -289,7 +311,17 @@
     }
    ],
    "source": [
-    "print(\"Accuracy: {:.4f}\\nPrecision:\\n- Macro: {:.4f}\\n- Micro: {:.4f}\\nRecall:\\n- Macro: {:.4f}\\n- Micro: {:.4f}\\nF1-measure:\\n- Macro: {:.4f}\\n- Micro: {:.4f}\".format(accuracy, macro_precision, micro_precision, macro_recall, micro_recall, macro_f1, micro_f1))"
+    "print(\n",
+    "    \"Accuracy: {:.4f}\\nPrecision:\\n- Macro: {:.4f}\\n- Micro: {:.4f}\\nRecall:\\n- Macro: {:.4f}\\n- Micro: {:.4f}\\nF1-measure:\\n- Macro: {:.4f}\\n- Micro: {:.4f}\".format(\n",
+    "        accuracy,\n",
+    "        macro_precision,\n",
+    "        micro_precision,\n",
+    "        macro_recall,\n",
+    "        micro_recall,\n",
+    "        macro_f1,\n",
+    "        micro_f1,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -322,12 +354,12 @@
     "\n",
     "cm_plt = pd.DataFrame(cm[:73])\n",
     "\n",
-    "plt.figure(figsize = (25, 25))\n",
+    "plt.figure(figsize=(25, 25))\n",
     "ax = plt.axes()\n",
     "\n",
     "sb.heatmap(cm_plt, annot=True)\n",
     "\n",
-    "ax.xaxis.set_ticks_position('top')\n",
+    "ax.xaxis.set_ticks_position(\"top\")\n",
     "\n",
     "plt.show()"
    ]
@@ -362,7 +394,7 @@
     }
    ],
    "source": [
-    "example_text = '''The coconut tree (Cocos nucifera) is a member of the family Arecaceae (palm family) and the only species of the genus Cocos.\n",
+    "example_text = \"\"\"The coconut tree (Cocos nucifera) is a member of the family Arecaceae (palm family) and the only species of the genus Cocos.\n",
     "The term coconut can refer to the whole coconut palm or the seed, or the fruit, which, botanically, is a drupe, not a nut.\n",
     "The spelling cocoanut is an archaic form of the word.\n",
     "The term is derived from the 16th-century Portuguese and Spanish word coco meaning \"head\" or \"skull\", from the three indentations on the coconut shell that resemble facial features.\n",
@@ -373,7 +405,7 @@
     "When dried, the coconut flesh is called copra.\n",
     "The oil and milk derived from it are commonly used in cooking and frying, as well as in soaps and cosmetics.\n",
     "The husks and leaves can be used as material to make a variety of products for furnishing and decorating.\n",
-    "The coconut also has cultural and religious significance in certain societies, particularly in India, where it is used in Hindu rituals.'''\n",
+    "The coconut also has cultural and religious significance in certain societies, particularly in India, where it is used in Hindu rituals.\"\"\"\n",
     "\n",
     "example_preds = classifier.predict(vectorizer.transform([example_text]))\n",
     "example_labels = mlb.inverse_transform(example_preds)\n",
