--- a/machine_learning/dbscan/dbscan.ipynb
+++ b/machine_learning/dbscan/dbscan.ipynb
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "plt.plot(x[:,0], x[:,1],'ro')"
+    "plt.plot(x[:, 0], x[:, 1], \"ro\")"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = { (point[0],point[1]):{'label':'undefined'} for point in x }"
+    "points = {(point[0], point[1]): {\"label\": \"undefined\"} for point in x}"
    ]
   },
   {
@@ -160,8 +160,8 @@
    "source": [
     "def euclidean_distance(q, p):\n",
     "    \"\"\"\n",
-    "        Calculates the Euclidean distance\n",
-    "        between points P and Q\n",
+    "    Calculates the Euclidean distance\n",
+    "    between points P and Q\n",
     "    \"\"\"\n",
     "    a = pow((q[0] - p[0]), 2)\n",
     "    b = pow((q[1] - p[1]), 2)\n",
@@ -176,8 +176,8 @@
    "source": [
     "def find_neighbors(db, q, eps):\n",
     "    \"\"\"\n",
-    "        Finds all points in the DB that\n",
-    "        are within a distance of eps from Q\n",
+    "    Finds all points in the DB that\n",
+    "    are within a distance of eps from Q\n",
     "    \"\"\"\n",
     "    return [p for p in db if euclidean_distance(q, p) <= eps]"
    ]
@@ -190,8 +190,8 @@
    "source": [
     "def plot_cluster(db, clusters):\n",
     "    \"\"\"\n",
-    "        Extracts all the points in the DB and puts them together\n",
-    "        as seperate clusters and finally plots them\n",
+    "    Extracts all the points in the DB and puts them together\n",
+    "    as seperate clusters and finally plots them\n",
     "    \"\"\"\n",
     "    temp = []\n",
     "    noise = []\n",
@@ -257,10 +257,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dbscan(db,eps,min_pts):\n",
-    "    '''\n",
-    "        Implementation of the DBSCAN algorithm\n",
-    "    '''\n",
+    "def dbscan(db, eps, min_pts):\n",
+    "    \"\"\"\n",
+    "    Implementation of the DBSCAN algorithm\n",
+    "    \"\"\"\n",
     "    clusters = []\n",
     "    c = 0\n",
     "    for p in db:\n",
@@ -285,7 +285,7 @@
     "            neighbors_n = find_neighbors(db, q, eps)\n",
     "            if len(neighbors_n) >= min_pts:\n",
     "                seed_set = seed_set + neighbors_n\n",
-    "    return db, clusters\n"
+    "    return db, clusters"
    ]
   },
   {
@@ -317,9 +317,9 @@
     "eps = 0.25\n",
     "min_pts = 12\n",
     "\n",
-    "db,clusters = dbscan(points,eps,min_pts)\n",
+    "db, clusters = dbscan(points, eps, min_pts)\n",
     "\n",
-    "plot_cluster(db,clusters)"
+    "plot_cluster(db, clusters)"
    ]
   },
   {
