--- a/machine_learning/random_forest_regression/random_forest_regression.ipynb
+++ b/machine_learning/random_forest_regression/random_forest_regression.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Importing the dataset\n",
-    "dataset = pd.read_csv('Position_Salaries.csv')\n",
+    "dataset = pd.read_csv(\"Position_Salaries.csv\")\n",
     "X = dataset.iloc[:, 1:2].values\n",
     "y = dataset.iloc[:, 2].values"
    ]
@@ -52,7 +52,7 @@
    ],
    "source": [
     "# Fitting Random Forest Regression to the dataset\n",
-    "regressor = RandomForestRegressor(n_estimators = 300, random_state = 0)\n",
+    "regressor = RandomForestRegressor(n_estimators=300, random_state=0)\n",
     "regressor.fit(X, y)"
    ]
   },
@@ -105,11 +105,11 @@
     "# Visualising the Random Forest Regression results (higher resolution)\n",
     "X_grid = np.arange(min(X), max(X), 0.01)\n",
     "X_grid = X_grid.reshape((len(X_grid), 1))\n",
-    "plt.scatter(X, y, color = 'red')\n",
-    "plt.plot(X_grid, regressor.predict(X_grid), color = 'blue')\n",
-    "plt.title('Truth or Bluff (Random Forest Regression)')\n",
-    "plt.xlabel('Position level')\n",
-    "plt.ylabel('Salary')\n",
+    "plt.scatter(X, y, color=\"red\")\n",
+    "plt.plot(X_grid, regressor.predict(X_grid), color=\"blue\")\n",
+    "plt.title(\"Truth or Bluff (Random Forest Regression)\")\n",
+    "plt.xlabel(\"Position level\")\n",
+    "plt.ylabel(\"Salary\")\n",
     "plt.show()"
    ]
   },
