--- a/neural_network/02-imdb-binary-classification.ipynb
+++ b/neural_network/02-imdb-binary-classification.ipynb
@@ -16,14 +16,14 @@
     }
    ],
    "source": [
-    "#Imports\n",
+    "# Imports\n",
     "from keras.datasets import imdb\n",
     "\n",
     "from keras import models\n",
     "from keras import layers\n",
     "from keras import optimizers\n",
     "from keras import losses\n",
-    "from keras import metrics,activations\n",
+    "from keras import metrics, activations\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -43,9 +43,9 @@
     }
    ],
    "source": [
-    "#Downloading data from https://s3.amazonaws.com/text-datasets/imdb.npz\n",
+    "# Downloading data from https://s3.amazonaws.com/text-datasets/imdb.npz\n",
     "\n",
-    "(xtrain,ytrain), (xtest, ytest) = imdb.load_data(num_words=10000)"
+    "(xtrain, ytrain), (xtest, ytest) = imdb.load_data(num_words=10000)"
    ]
   },
   {
@@ -54,18 +54,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Exploring the dataset\n",
+    "# Exploring the dataset\n",
     "\n",
-    "print('xtrain shape', xtrain.shape)\n",
-    "print('ytrain shape', ytrain.shape)\n",
+    "print(\"xtrain shape\", xtrain.shape)\n",
+    "print(\"ytrain shape\", ytrain.shape)\n",
     "print()\n",
-    "print('xtest shape', xtest.shape)\n",
-    "print('ytest shape', ytest.shape)\n",
+    "print(\"xtest shape\", xtest.shape)\n",
+    "print(\"ytest shape\", ytest.shape)\n",
     "print()\n",
-    "print('xtrain first review as dictionary index', xtrain[1])\n",
+    "print(\"xtrain first review as dictionary index\", xtrain[1])\n",
     "print()\n",
     "print()\n",
-    "print('ytrain label', ytrain[0])"
+    "print(\"ytrain label\", ytrain[0])"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#index to words mapping\n",
+    "# index to words mapping\n",
     "word_index = imdb.get_word_index()"
    ]
   },
@@ -93,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decode_review = ' '.join([reverse_word_index.get(i-3, reverse_word_index.get(i)) for i in xtrain[22]])\n",
+    "decode_review = \" \".join(\n",
+    "    [reverse_word_index.get(i - 3, reverse_word_index.get(i)) for i in xtrain[22]]\n",
+    ")\n",
     "decode_review"
    ]
   },
@@ -105,11 +107,13 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def vectorize_sequences(sequences, dimension=10000):\n",
     "    results = np.zeros((len(sequences), dimension))\n",
     "    for i, sequence in enumerate(sequences):\n",
-    "        results[i, sequence] = 1. \n",
+    "        results[i, sequence] = 1.0\n",
     "    return results\n",
+    "\n",
     "\n",
     "x_train = vectorize_sequences(xtrain)\n",
     "x_test = vectorize_sequences(xtest)"
@@ -121,8 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ytrain = np.asarray(ytrain).astype('float32')\n",
-    "ytest = np.asarray(ytest).astype('float32')"
+    "ytrain = np.asarray(ytrain).astype(\"float32\")\n",
+    "ytest = np.asarray(ytest).astype(\"float32\")"
    ]
   },
   {
@@ -131,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model\n",
+    "# model\n",
     "model = models.Sequential()\n",
     "model.add(layers.Dense(16, activation=activations.relu, input_shape=(10000,)))\n",
     "model.add(layers.Dense(16, activation=activations.relu))\n",
@@ -144,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer=optimizers.RMSprop(lr=0.0001), loss=losses.mse, metrics=['acc'])"
+    "model.compile(optimizer=optimizers.RMSprop(lr=0.0001), loss=losses.mse, metrics=[\"acc\"])"
    ]
   },
   {
@@ -166,11 +170,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit(x_train_partial, y_train_partial, epochs=4, batch_size=512, validation_data=(x_val,y_val))\n",
+    "history = model.fit(\n",
+    "    x_train_partial,\n",
+    "    y_train_partial,\n",
+    "    epochs=4,\n",
+    "    batch_size=512,\n",
+    "    validation_data=(x_val, y_val),\n",
+    ")\n",
     "history_dict = history.history\n",
     "history_dict.keys()\n",
-    "print(history.history['acc'][-1])\n",
-    "print(history.history['val_acc'][-1])"
+    "print(history.history[\"acc\"][-1])\n",
+    "print(history.history[\"val_acc\"][-1])"
    ]
   },
   {
@@ -188,9 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss = history_dict['loss']\n",
-    "val_loss = history_dict['val_loss']\n",
-    "epochs = range(0, len(loss)+1)\n",
+    "loss = history_dict[\"loss\"]\n",
+    "val_loss = history_dict[\"val_loss\"]\n",
+    "epochs = range(0, len(loss) + 1)\n",
     "epochs"
    ]
   },
@@ -201,20 +211,20 @@
    "outputs": [],
    "source": [
     "%matplotlib\n",
-    "acc = history.history['acc']\n",
-    "val_acc = history.history['val_acc']\n",
-    "loss = history.history['loss']\n",
-    "val_loss = history.history['val_loss']\n",
+    "acc = history.history[\"acc\"]\n",
+    "val_acc = history.history[\"val_acc\"]\n",
+    "loss = history.history[\"loss\"]\n",
+    "val_loss = history.history[\"val_loss\"]\n",
     "\n",
     "epochs = range(1, len(acc) + 1)\n",
     "\n",
     "# \"bo\" is for \"blue dot\"\n",
-    "plt.plot(epochs, loss, 'ro', label='Training loss')\n",
+    "plt.plot(epochs, loss, \"ro\", label=\"Training loss\")\n",
     "# b is for \"solid blue line\"\n",
-    "plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
-    "plt.title('Training and validation loss')\n",
-    "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Loss')\n",
+    "plt.plot(epochs, val_loss, \"b\", label=\"Validation loss\")\n",
+    "plt.title(\"Training and validation loss\")\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Loss\")\n",
     "plt.legend()\n",
     "\n",
     "plt.show()"
@@ -226,15 +236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.clf()      # clear figure# clear  \n",
-    "acc_values = history_dict['acc']\n",
-    "val_acc_values = history_dict['val_acc']\n",
+    "plt.clf()  # clear figure# clear\n",
+    "acc_values = history_dict[\"acc\"]\n",
+    "val_acc_values = history_dict[\"val_acc\"]\n",
     "\n",
-    "plt.plot(epochs, acc, 'bo', label='Training acc')\n",
-    "plt.plot(epochs, val_acc, 'b', label='Validation acc')\n",
-    "plt.title('Training and validation accuracy')\n",
-    "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Loss')\n",
+    "plt.plot(epochs, acc, \"bo\", label=\"Training acc\")\n",
+    "plt.plot(epochs, val_acc, \"b\", label=\"Validation acc\")\n",
+    "plt.title(\"Training and validation accuracy\")\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Loss\")\n",
     "plt.legend()\n",
     "\n",
     "plt.show()"
