--- a/neural_network/A-simple-GAN.ipynb
+++ b/neural_network/A-simple-GAN.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "def function_1D(x):\n",
-    "    return x*x"
+    "    return x * x"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs=np.arange(-0.5,0.6,0.1)\n",
-    "outputs=[function_1D(x) for x in inputs]"
+    "inputs = np.arange(-0.5, 0.6, 0.1)\n",
+    "outputs = [function_1D(x) for x in inputs]"
    ]
   },
   {
@@ -99,13 +99,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Defining random values\n",
+    "# Defining random values\n",
     "def generate_samples(n=100):\n",
-    "    x1=np.random.rand(n)-0.5\n",
-    "    x2=x1*x1\n",
-    "    x1=x1.reshape(n,1)\n",
-    "    x2=x2.reshape(n,1)\n",
-    "    return np.hstack((x1,x2))"
+    "    x1 = np.random.rand(n) - 0.5\n",
+    "    x2 = x1 * x1\n",
+    "    x1 = x1.reshape(n, 1)\n",
+    "    x2 = x2.reshape(n, 1)\n",
+    "    return np.hstack((x1, x2))"
    ]
   },
   {
@@ -161,14 +161,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Code for the Discriminator Unit:\n",
+    "# Code for the Discriminator Unit:\n",
     "def define_discriminator(n_inputs=2):\n",
-    "\tmodel = Sequential()\n",
-    "\tmodel.add(Dense(25, activation='relu', kernel_initializer='he_uniform', input_dim=n_inputs))\n",
-    "\tmodel.add(Dense(1, activation='sigmoid'))\n",
-    "\t# compile model\n",
-    "\tmodel.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "\treturn model"
+    "    model = Sequential()\n",
+    "    model.add(\n",
+    "        Dense(\n",
+    "            25, activation=\"relu\", kernel_initializer=\"he_uniform\", input_dim=n_inputs\n",
+    "        )\n",
+    "    )\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "    # compile model\n",
+    "    model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "    return model"
    ]
   },
   {
@@ -209,13 +213,13 @@
    "outputs": [],
    "source": [
     "def generate_real_samples(n):\n",
-    "    x1=np.random.rand(n)-0.5\n",
-    "    x2=x1*x1\n",
-    "    x1=x1.reshape(n,1)\n",
-    "    x2=x2.reshape(n,1)\n",
-    "    X= np.hstack((x1,x2))\n",
-    "    y=np.ones((n,1))\n",
-    "    return X,y"
+    "    x1 = np.random.rand(n) - 0.5\n",
+    "    x2 = x1 * x1\n",
+    "    x1 = x1.reshape(n, 1)\n",
+    "    x2 = x2.reshape(n, 1)\n",
+    "    X = np.hstack((x1, x2))\n",
+    "    y = np.ones((n, 1))\n",
+    "    return X, y"
    ]
   },
   {
@@ -225,17 +229,17 @@
    "outputs": [],
    "source": [
     "def generate_fake_samples(n):\n",
-    "\t# generate inputs in [-1, 1]\n",
-    "\tX1 = -1 + np.random.rand(n) * 2\n",
-    "\t# generate outputs in [-1, 1]\n",
-    "\tX2 = -1 + np.random.rand(n) * 2\n",
-    "\t# stack arrays\n",
-    "\tX1 = X1.reshape(n, 1)\n",
-    "\tX2 = X2.reshape(n, 1)\n",
-    "\tX = np.hstack((X1, X2))\n",
-    "\t# generate class labels\n",
-    "\ty = np.zeros((n, 1))\n",
-    "\treturn X, y"
+    "    # generate inputs in [-1, 1]\n",
+    "    X1 = -1 + np.random.rand(n) * 2\n",
+    "    # generate outputs in [-1, 1]\n",
+    "    X2 = -1 + np.random.rand(n) * 2\n",
+    "    # stack arrays\n",
+    "    X1 = X1.reshape(n, 1)\n",
+    "    X2 = X2.reshape(n, 1)\n",
+    "    X = np.hstack((X1, X2))\n",
+    "    # generate class labels\n",
+    "    y = np.zeros((n, 1))\n",
+    "    return X, y"
    ]
   },
   {
@@ -244,23 +248,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#training the discriminator model\n",
+    "# training the discriminator model\n",
     "def train_discriminator(model, n_epochs=1000, n_batch=128):\n",
-    "\thalf_batch = int(n_batch / 2)\n",
-    "\t# run epochs manually\n",
-    "\tfor i in range(n_epochs):\n",
-    "\t\t# generate real examples\n",
-    "\t\tX_real, y_real = generate_real_samples(half_batch)\n",
-    "\t\t# update model\n",
-    "\t\tmodel.train_on_batch(X_real, y_real)\n",
-    "\t\t# generate fake examples\n",
-    "\t\tX_fake, y_fake = generate_fake_samples(half_batch)\n",
-    "\t\t# update model\n",
-    "\t\tmodel.train_on_batch(X_fake, y_fake)\n",
-    "\t\t# evaluate the model\n",
-    "\t\t_, acc_real = model.evaluate(X_real, y_real, verbose=0)\n",
-    "\t\t_, acc_fake = model.evaluate(X_fake, y_fake, verbose=0)\n",
-    "\t\tprint(i, acc_real, acc_fake)"
+    "    half_batch = int(n_batch / 2)\n",
+    "    # run epochs manually\n",
+    "    for i in range(n_epochs):\n",
+    "        # generate real examples\n",
+    "        X_real, y_real = generate_real_samples(half_batch)\n",
+    "        # update model\n",
+    "        model.train_on_batch(X_real, y_real)\n",
+    "        # generate fake examples\n",
+    "        X_fake, y_fake = generate_fake_samples(half_batch)\n",
+    "        # update model\n",
+    "        model.train_on_batch(X_fake, y_fake)\n",
+    "        # evaluate the model\n",
+    "        _, acc_real = model.evaluate(X_real, y_real, verbose=0)\n",
+    "        _, acc_fake = model.evaluate(X_fake, y_fake, verbose=0)\n",
+    "        print(i, acc_real, acc_fake)"
    ]
   },
   {
@@ -1323,10 +1327,14 @@
    "source": [
     "# define the generator model unit\n",
     "def define_generator(latent_dim, n_outputs=2):\n",
-    "\tmodel = Sequential()\n",
-    "\tmodel.add(Dense(15, activation='relu', kernel_initializer='he_uniform', input_dim=latent_dim))\n",
-    "\tmodel.add(Dense(n_outputs, activation='linear'))\n",
-    "\treturn model"
+    "    model = Sequential()\n",
+    "    model.add(\n",
+    "        Dense(\n",
+    "            15, activation=\"relu\", kernel_initializer=\"he_uniform\", input_dim=latent_dim\n",
+    "        )\n",
+    "    )\n",
+    "    model.add(Dense(n_outputs, activation=\"linear\"))\n",
+    "    return model"
    ]
   },
   {
@@ -1368,11 +1376,11 @@
    "source": [
     "# generate points in latent space as input for the generator\n",
     "def generate_latent_points(latent_dim, n):\n",
-    "\t# generate points in the latent space\n",
-    "\tx_input = np.random.randn(latent_dim * n)\n",
-    "\t# reshape into a batch of inputs for the network\n",
-    "\tx_input = x_input.reshape(n, latent_dim)\n",
-    "\treturn x_input"
+    "    # generate points in the latent space\n",
+    "    x_input = np.random.randn(latent_dim * n)\n",
+    "    # reshape into a batch of inputs for the network\n",
+    "    x_input = x_input.reshape(n, latent_dim)\n",
+    "    return x_input"
    ]
   },
   {
@@ -1383,13 +1391,13 @@
    "source": [
     "# use the generator to generate n fake examples and plot the results\n",
     "def generate_fake_samples(generator, latent_dim, n):\n",
-    "\t# generate points in latent space\n",
-    "\tx_input = generate_latent_points(latent_dim, n)\n",
-    "\t# predict outputs\n",
-    "\tX = generator.predict(x_input)\n",
+    "    # generate points in latent space\n",
+    "    x_input = generate_latent_points(latent_dim, n)\n",
+    "    # predict outputs\n",
+    "    X = generator.predict(x_input)\n",
     "    # create class labels\n",
-    "\ty = np.zeros((n, 1))\n",
-    "\treturn X, y"
+    "    y = np.zeros((n, 1))\n",
+    "    return X, y"
    ]
   },
   {
@@ -1407,17 +1415,17 @@
    "source": [
     "# define the combined generator and discriminator model, for updating the generator\n",
     "def define_gan(generator, discriminator):\n",
-    "\t# make weights in the discriminator not trainable\n",
-    "\tdiscriminator.trainable = False\n",
-    "\t# connect them\n",
-    "\tmodel = Sequential()\n",
-    "\t# add generator\n",
-    "\tmodel.add(generator)\n",
-    "\t# add the discriminator\n",
-    "\tmodel.add(discriminator)\n",
-    "\t# compile model\n",
-    "\tmodel.compile(loss='binary_crossentropy', optimizer='adam')\n",
-    "\treturn model"
+    "    # make weights in the discriminator not trainable\n",
+    "    discriminator.trainable = False\n",
+    "    # connect them\n",
+    "    model = Sequential()\n",
+    "    # add generator\n",
+    "    model.add(generator)\n",
+    "    # add the discriminator\n",
+    "    model.add(discriminator)\n",
+    "    # compile model\n",
+    "    model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\")\n",
+    "    return model"
    ]
   },
   {
@@ -1427,27 +1435,29 @@
    "outputs": [],
    "source": [
     "# train the generator and discriminator\n",
-    "def train(g_model, d_model, gan_model, latent_dim, n_epochs=10000, n_batch=128, n_eval=2000):\n",
-    "\t# determine half the size of one batch, for updating the discriminator\n",
-    "\thalf_batch = int(n_batch / 2)\n",
-    "\t# manually enumerate epochs\n",
-    "\tfor i in range(n_epochs):\n",
-    "\t\t# prepare real samples\n",
-    "\t\tx_real, y_real = generate_real_samples(half_batch)\n",
-    "\t\t# prepare fake examples\n",
-    "\t\tx_fake, y_fake = generate_fake_samples(g_model, latent_dim, half_batch)\n",
-    "\t\t# update discriminator\n",
-    "\t\td_model.train_on_batch(x_real, y_real)\n",
-    "\t\td_model.train_on_batch(x_fake, y_fake)\n",
-    "\t\t# prepare points in latent space as input for the generator\n",
-    "\t\tx_gan = generate_latent_points(latent_dim, n_batch)\n",
-    "\t\t# create inverted labels for the fake samples\n",
-    "\t\ty_gan = np.ones((n_batch, 1))\n",
-    "\t\t# update the generator via the discriminator's error\n",
-    "\t\tgan_model.train_on_batch(x_gan, y_gan)\n",
-    "\t\t# evaluate the model every n_eval epochs\n",
-    "\t\tif (i+1) % n_eval == 0:\n",
-    "\t\t\tsummarize_performance(i, g_model, d_model, latent_dim)"
+    "def train(\n",
+    "    g_model, d_model, gan_model, latent_dim, n_epochs=10000, n_batch=128, n_eval=2000\n",
+    "):\n",
+    "    # determine half the size of one batch, for updating the discriminator\n",
+    "    half_batch = int(n_batch / 2)\n",
+    "    # manually enumerate epochs\n",
+    "    for i in range(n_epochs):\n",
+    "        # prepare real samples\n",
+    "        x_real, y_real = generate_real_samples(half_batch)\n",
+    "        # prepare fake examples\n",
+    "        x_fake, y_fake = generate_fake_samples(g_model, latent_dim, half_batch)\n",
+    "        # update discriminator\n",
+    "        d_model.train_on_batch(x_real, y_real)\n",
+    "        d_model.train_on_batch(x_fake, y_fake)\n",
+    "        # prepare points in latent space as input for the generator\n",
+    "        x_gan = generate_latent_points(latent_dim, n_batch)\n",
+    "        # create inverted labels for the fake samples\n",
+    "        y_gan = np.ones((n_batch, 1))\n",
+    "        # update the generator via the discriminator's error\n",
+    "        gan_model.train_on_batch(x_gan, y_gan)\n",
+    "        # evaluate the model every n_eval epochs\n",
+    "        if (i + 1) % n_eval == 0:\n",
+    "            summarize_performance(i, g_model, d_model, latent_dim)"
    ]
   },
   {
@@ -1458,20 +1468,20 @@
    "source": [
     "# evaluate the discriminator and plot real and fake points\n",
     "def summarize_performance(epoch, generator, discriminator, latent_dim, n=100):\n",
-    "\t# prepare real samples\n",
-    "\tx_real, y_real = generate_real_samples(n)\n",
-    "\t# evaluate discriminator on real examples\n",
-    "\t_, acc_real = discriminator.evaluate(x_real, y_real, verbose=0)\n",
-    "\t# prepare fake examples\n",
-    "\tx_fake, y_fake = generate_fake_samples(generator, latent_dim, n)\n",
-    "\t# evaluate discriminator on fake examples\n",
-    "\t_, acc_fake = discriminator.evaluate(x_fake, y_fake, verbose=0)\n",
-    "\t# summarize discriminator performance\n",
-    "\tprint(epoch, acc_real, acc_fake)\n",
-    "\t# scatter plot real and fake data points\n",
-    "\tpyplot.scatter(x_real[:, 0], x_real[:, 1], color='red')\n",
-    "\tpyplot.scatter(x_fake[:, 0], x_fake[:, 1], color='blue')\n",
-    "\tpyplot.show()"
+    "    # prepare real samples\n",
+    "    x_real, y_real = generate_real_samples(n)\n",
+    "    # evaluate discriminator on real examples\n",
+    "    _, acc_real = discriminator.evaluate(x_real, y_real, verbose=0)\n",
+    "    # prepare fake examples\n",
+    "    x_fake, y_fake = generate_fake_samples(generator, latent_dim, n)\n",
+    "    # evaluate discriminator on fake examples\n",
+    "    _, acc_fake = discriminator.evaluate(x_fake, y_fake, verbose=0)\n",
+    "    # summarize discriminator performance\n",
+    "    print(epoch, acc_real, acc_fake)\n",
+    "    # scatter plot real and fake data points\n",
+    "    pyplot.scatter(x_real[:, 0], x_real[:, 1], color=\"red\")\n",
+    "    pyplot.scatter(x_fake[:, 0], x_fake[:, 1], color=\"blue\")\n",
+    "    pyplot.show()"
    ]
   },
   {
