--- a/neural_network/CNN-using keras.ipynb
+++ b/neural_network/CNN-using keras.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Images fed into this model are 28 x 28 pixels with 3 channels\n",
-    "img_shape = (28,28,1)\n",
+    "img_shape = (28, 28, 1)\n",
     "# Set up the model\n",
     "model = Sequential()"
    ]
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Add convolutional layer with 3, 3 by 3 filters\n",
-    "model.add(Conv2D(3,kernel_size=3,input_shape=img_shape))"
+    "model.add(Conv2D(3, kernel_size=3, input_shape=img_shape))"
    ]
   },
   {
@@ -125,9 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add relu activation to the layer \n",
-    "model.add(Activation('relu'))\n",
-    "#Pooling\n",
+    "# Add relu activation to the layer\n",
+    "model.add(Activation(\"relu\"))\n",
+    "# Pooling\n",
     "model.add(MaxPool2D(2))"
    ]
   },
@@ -148,13 +148,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fully connected layers\n",
+    "# Fully connected layers\n",
     "# Use Flatten to convert 3D data to 1D\n",
     "model.add(Flatten())\n",
     "# Add dense layer with 10 neurons\n",
     "model.add(Dense(10))\n",
     "# we use the softmax activation function for our last layer\n",
-    "model.add(Activation('softmax'))"
+    "model.add(Activation(\"softmax\"))"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss='categorical_crossentropy', optimizer = 'adam', metrics=['accuracy'])"
+    "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
@@ -224,9 +224,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importing the datasets\n",
+    "# importing the datasets\n",
     "from keras.datasets import mnist\n",
-    "#loading the datasets\n",
+    "\n",
+    "# loading the datasets\n",
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
    ]
   },
@@ -237,6 +238,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.imshow(X_train[0])\n",
     "print(X_train[0].shape)"
    ]
@@ -256,8 +258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train.reshape(60000,28,28,1)\n",
-    "X_test = X_test.reshape(10000,28,28,1)"
+    "X_train = X_train.reshape(60000, 28, 28, 1)\n",
+    "X_test = X_test.reshape(10000, 28, 28, 1)"
    ]
   },
   {
@@ -275,6 +277,7 @@
    "outputs": [],
    "source": [
     "from keras.utils import to_categorical\n",
+    "\n",
     "y_train = to_categorical(y_train)\n",
     "y_test = to_categorical(y_test)"
    ]
@@ -294,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train,validation_data=(X_test,y_test) ,epochs=10, verbose=2)"
+    "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=10, verbose=2)"
    ]
   },
   {
@@ -331,7 +334,7 @@
    "outputs": [],
    "source": [
     "def return_Digit(x):\n",
-    "    a=np.where(x==max(x))\n",
+    "    a = np.where(x == max(x))\n",
     "    print(int(a[0]))"
    ]
   },
@@ -341,8 +344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction=model.predict(X_test[:4])\n",
-    "np.apply_along_axis(return_Digit,axis=1,arr=prediction)"
+    "prediction = model.predict(X_test[:4])\n",
+    "np.apply_along_axis(return_Digit, axis=1, arr=prediction)"
    ]
   },
   {
