--- a/neural_network/fully_connected_neural_network.ipynb
+++ b/neural_network/fully_connected_neural_network.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Use in Markup cell type\n",
-    "#![alt text](imagename.png \"Title\")  "
+    "# Use in Markup cell type\n",
+    "#![alt text](imagename.png \"Title\")"
    ]
   },
   {
@@ -47,9 +47,10 @@
    "source": [
     "###1. Load Data and Splot Data\n",
     "from keras.datasets import mnist\n",
-    "from keras.models import Sequential \n",
+    "from keras.models import Sequential\n",
     "from keras.layers.core import Dense, Activation\n",
     "from keras.utils import np_utils\n",
+    "\n",
     "(X_train, Y_train), (X_test, Y_test) = mnist.load_data()"
    ]
   },
@@ -77,6 +78,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "n = 10  # how many digits we will display\n",
     "plt.figure(figsize=(20, 4))\n",
     "for i in range(n):\n",
@@ -107,17 +109,23 @@
     }
    ],
    "source": [
-    "print(\"Previous X_train shape: {} \\nPrevious Y_train shape:{}\".format(X_train.shape, Y_train.shape))\n",
-    "X_train = X_train.reshape(60000, 784)     \n",
+    "print(\n",
+    "    \"Previous X_train shape: {} \\nPrevious Y_train shape:{}\".format(\n",
+    "        X_train.shape, Y_train.shape\n",
+    "    )\n",
+    ")\n",
+    "X_train = X_train.reshape(60000, 784)\n",
     "X_test = X_test.reshape(10000, 784)\n",
-    "X_train = X_train.astype('float32')     \n",
-    "X_test = X_test.astype('float32')     \n",
-    "X_train /= 255    \n",
+    "X_train = X_train.astype(\"float32\")\n",
+    "X_test = X_test.astype(\"float32\")\n",
+    "X_train /= 255\n",
     "X_test /= 255\n",
     "classes = 10\n",
-    "Y_train = np_utils.to_categorical(Y_train, classes)     \n",
+    "Y_train = np_utils.to_categorical(Y_train, classes)\n",
     "Y_test = np_utils.to_categorical(Y_test, classes)\n",
-    "print(\"New X_train shape: {} \\nNew Y_train shape:{}\".format(X_train.shape, Y_train.shape))"
+    "print(\n",
+    "    \"New X_train shape: {} \\nNew Y_train shape:{}\".format(X_train.shape, Y_train.shape)\n",
+    ")"
    ]
   },
   {
@@ -134,7 +142,7 @@
    "outputs": [],
    "source": [
     "input_size = 784\n",
-    "batch_size = 200   \n",
+    "batch_size = 200\n",
     "hidden1 = 400\n",
     "hidden2 = 20\n",
     "epochs = 2"
@@ -174,15 +182,14 @@
    ],
    "source": [
     "###4.Build the model\n",
-    "model = Sequential()     \n",
-    "model.add(Dense(hidden1, input_dim=input_size, activation='relu'))\n",
+    "model = Sequential()\n",
+    "model.add(Dense(hidden1, input_dim=input_size, activation=\"relu\"))\n",
     "# output = relu (dot (W, input) + bias)\n",
-    "model.add(Dense(hidden2, activation='relu'))\n",
-    "model.add(Dense(classes, activation='softmax')) \n",
+    "model.add(Dense(hidden2, activation=\"relu\"))\n",
+    "model.add(Dense(classes, activation=\"softmax\"))\n",
     "\n",
     "# Compilation\n",
-    "model.compile(loss='categorical_crossentropy', \n",
-    "    metrics=['accuracy'], optimizer='sgd')\n",
+    "model.compile(loss=\"categorical_crossentropy\", metrics=[\"accuracy\"], optimizer=\"sgd\")\n",
     "model.summary()"
    ]
   },
@@ -238,7 +245,7 @@
    "source": [
     "# Fitting on Data\n",
     "model.fit(X_train, Y_train, batch_size=batch_size, epochs=10, verbose=2)\n",
-    "###5.Test "
+    "###5.Test"
    ]
   },
   {
@@ -278,8 +285,8 @@
    ],
    "source": [
     "score = model.evaluate(X_test, Y_test, verbose=1)\n",
-    "print('\\n''Test accuracy:', score[1])\n",
-    "mask = range(10,20)\n",
+    "print(\"\\n\" \"Test accuracy:\", score[1])\n",
+    "mask = range(10, 20)\n",
     "X_valid = X_test[mask]\n",
     "y_pred = model.predict_classes(X_valid)\n",
     "print(y_pred)\n",
