--- a/neural_network/qlearning.ipynb
+++ b/neural_network/qlearning.ipynb
@@ -82,6 +82,7 @@
     "###\n",
     "#   * obstruction Ahead, Right, Left\n",
     "\n",
+    "\n",
     "def state(player: object, x_food: int, y_food: int) -> int:\n",
     "    \"\"\"\n",
     "    This function Checks for the food in nine directions and returns state.\n",
@@ -181,10 +182,19 @@
     "    # Adding to states list while priortizing danger over eating food\n",
     "    states = [int(x) for x in (DangerAhead, DangerLeft, DangerRight)]\n",
     "    if sum(states) == 0:\n",
-    "        states += [int(x) for x in (\n",
-    "            FoodStraightAhead, FoodAheadRight, FoodAheadLeft, FoodBehindRight,\n",
-    "            FoodBehindLeft, FoodBehind, FoodLeft, FoodRight\n",
-    "        )]\n",
+    "        states += [\n",
+    "            int(x)\n",
+    "            for x in (\n",
+    "                FoodStraightAhead,\n",
+    "                FoodAheadRight,\n",
+    "                FoodAheadLeft,\n",
+    "                FoodBehindRight,\n",
+    "                FoodBehindLeft,\n",
+    "                FoodBehind,\n",
+    "                FoodLeft,\n",
+    "                FoodRight,\n",
+    "            )\n",
+    "        ]\n",
     "    else:\n",
     "        states += [0] * 8\n",
     "    state = 0\n",
@@ -263,7 +273,7 @@
     "        - euler_dist(x_agent, y_agent, x_food, y_food)\n",
     "        < 0\n",
     "    ):\n",
-    "        return -7\n"
+    "        return -7"
    ]
   },
   {
@@ -273,8 +283,15 @@
    "outputs": [],
    "source": [
     "def learn(\n",
-    "        state: int, action: int, reward: int, next_state: int,\n",
-    "        next_action: int, i: int, trialNumber: int, epsilon: float) -> type(None):\n",
+    "    state: int,\n",
+    "    action: int,\n",
+    "    reward: int,\n",
+    "    next_state: int,\n",
+    "    next_action: int,\n",
+    "    i: int,\n",
+    "    trialNumber: int,\n",
+    "    epsilon: float,\n",
+    ") -> type(None):\n",
     "    \"\"\"\n",
     "    This function is for iteratively updating the Qtable.\n",
     "    \"\"\"\n",
