--- a/numerical_methods/newton_forward_divided_difference_formula.ipynb
+++ b/numerical_methods/newton_forward_divided_difference_formula.ipynb
@@ -35,51 +35,61 @@
     }
    ],
    "source": [
-    "import numpy as np \n",
+    "import numpy as np\n",
     "import math\n",
+    "\n",
     "x = np.array([-1.0, -0.5, 0, 0.5, 1.0], float)\n",
-    "y = np.array([-0.3333333333333333,-0.28867513459481287, 0.0, 0.8660254037844386, 3.0], float)\n",
+    "y = np.array(\n",
+    "    [-0.3333333333333333, -0.28867513459481287, 0.0, 0.8660254037844386, 3.0], float\n",
+    ")\n",
     "eps = 0.0001\n",
     "n = len(x)\n",
     "\n",
     "for i in range(n):\n",
-    "    a = float(x[i]*(3**x[i]))\n",
-    "    print(\"f(x\",i,\") =\",a)\n",
+    "    a = float(x[i] * (3 ** x[i]))\n",
+    "    print(\"f(x\", i, \") =\", a)\n",
     "\n",
-    "def coef(x, y): \n",
-    "    x.astype(float) \n",
-    "    y.astype(float) \n",
-    "    n = len(x) \n",
-    "    a = [] \n",
-    "    for i in range(n): \n",
-    "        a.append(y[i]) \n",
-    "    for j in range(1, n): \n",
-    "        for i in range(n-1, j-1, -1): \n",
-    "            a[i] = float(a[i]-a[i-1])\n",
-    "    return np.array(a)  \n",
+    "\n",
+    "def coef(x, y):\n",
+    "    x.astype(float)\n",
+    "    y.astype(float)\n",
+    "    n = len(x)\n",
+    "    a = []\n",
+    "    for i in range(n):\n",
+    "        a.append(y[i])\n",
+    "    for j in range(1, n):\n",
+    "        for i in range(n - 1, j - 1, -1):\n",
+    "            a[i] = float(a[i] - a[i - 1])\n",
+    "    return np.array(a)\n",
+    "\n",
+    "\n",
     "print(coef(x, y))\n",
     "r = float(-0.25)\n",
-    "t = float((r - x[0])/(x[1]-x[0]))\n",
+    "t = float((r - x[0]) / (x[1] - x[0]))\n",
+    "\n",
     "\n",
     "def tsum(t, n):\n",
     "    sum = float(1.0)\n",
     "    for i in range(0, n, 1):\n",
-    "        sum = float(sum*(t-i))\n",
+    "        sum = float(sum * (t - i))\n",
     "    return float(sum)\n",
-    "    \n",
-    "def Eval(a, x, t): \n",
-    "    x.astype(float) \n",
-    "    n = len(a) \n",
+    "\n",
+    "\n",
+    "def Eval(a, x, t):\n",
+    "    x.astype(float)\n",
+    "    n = len(a)\n",
     "    temp = a[0]\n",
     "    count = 1\n",
     "    for i in range(1, n, 1):\n",
-    "        temp += (tsum(t, i-1)*a[i])/math.factorial(i)\n",
+    "        temp += (tsum(t, i - 1) * a[i]) / math.factorial(i)\n",
     "        count = count + 1\n",
-    "    print(\"Count of parts in the interpolation formula:\",count)\n",
+    "    print(\"Count of parts in the interpolation formula:\", count)\n",
     "    return temp\n",
-    "result = Eval(coef(x,y),x,t)\n",
     "\n",
-    "print(\"Value of functions f(x) in\",r,\"=\",result)\n"
+    "\n",
+    "result = Eval(coef(x, y), x, t)\n",
+    "\n",
+    "print(\"Value of functions f(x) in\", r, \"=\", result)"
    ]
   },
   {
