--- a/numerical_methods/the_rectangular_method.ipynb
+++ b/numerical_methods/the_rectangular_method.ipynb
@@ -20,40 +20,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math \n",
+    "import math\n",
     "import numpy as np\n",
     "\n",
-    "def integration(a,b,n):\n",
-    "    h = (b-a)/n\n",
+    "\n",
+    "def integration(a, b, n):\n",
+    "    h = (b - a) / n\n",
     "    r = f(a) + f(b)\n",
     "    i = 1\n",
     "    while i < n:\n",
-    "        x = a + i*h\n",
+    "        x = a + i * h\n",
     "        r = r + 4 * f(x)\n",
     "        i = i + 1\n",
     "        x = a + i * h\n",
-    "        r = r +2*f(x)\n",
+    "        r = r + 2 * f(x)\n",
     "        i = i + 1\n",
     "    r = r * h / 3\n",
-    "    print(\"Result: \", r) \n",
+    "    print(\"Result: \", r)\n",
     "\n",
-    "def rectangles(a,b,n):\n",
-    "    \n",
-    "    z = (b-a)/n\n",
+    "\n",
+    "def rectangles(a, b, n):\n",
+    "\n",
+    "    z = (b - a) / n\n",
     "    i = a\n",
-    "    s1=0\n",
-    "    s2=0\n",
-    "    while i<b:\n",
-    "        \n",
-    "        s1=s1+f(i)*z\n",
-    "        i=i+z\n",
-    "    i=a \n",
-    "    while i<b:\n",
-    "        i=i+z\n",
-    "        s2=s2+f(i)*z\n",
+    "    s1 = 0\n",
+    "    s2 = 0\n",
+    "    while i < b:\n",
     "\n",
-    "    print('Result of formula of the left rectangles: ',s1)\n",
-    "    print('Result of formula of the left rectangles: ',s2)\n"
+    "        s1 = s1 + f(i) * z\n",
+    "        i = i + z\n",
+    "    i = a\n",
+    "    while i < b:\n",
+    "        i = i + z\n",
+    "        s2 = s2 + f(i) * z\n",
+    "\n",
+    "    print(\"Result of formula of the left rectangles: \", s1)\n",
+    "    print(\"Result of formula of the left rectangles: \", s2)"
    ]
   },
   {
@@ -80,15 +82,16 @@
    ],
    "source": [
     "def f(x):\n",
-    "    return  (math.e**x / 2)*(math.cos(x)-math.sin(x))\n",
+    "    return (math.e ** x / 2) * (math.cos(x) - math.sin(x))\n",
     "\n",
-    "n = 4  \n",
-    "a = 2.\n",
-    "b = 3.\n",
+    "\n",
+    "n = 4\n",
+    "a = 2.0\n",
+    "b = 3.0\n",
     "Si = []\n",
     "\n",
-    "integration(a,b,n)\n",
-    "rectangles(a,b,n)"
+    "integration(a, b, n)\n",
+    "rectangles(a, b, n)"
    ]
   },
   {
