--- a/numerical_methods/the_trapezium_method.ipynb
+++ b/numerical_methods/the_trapezium_method.ipynb
@@ -28,26 +28,30 @@
     }
    ],
    "source": [
-    "import math \n",
+    "import math\n",
     "import numpy as np\n",
     "\n",
-    "n = 4 \n",
-    "a = 2.\n",
-    "b = 3.\n",
-    "def f(x):\n",
-    "    return  (math.e**x / 2)*(math.cos(x)-math.sin(x))\n",
+    "n = 4\n",
+    "a = 2.0\n",
+    "b = 3.0\n",
     "\n",
-    "def trapezoid(a,b,n):\n",
-    "  z = (b-a)/n\n",
-    "  i=a\n",
-    "  s=0\n",
-    "  while (i+z)<b:\n",
-    "    s=s+f(i)\n",
-    "    i=i+z \n",
-    "  s=z*(f(a)+f(b))/2+s\n",
-    "  print('Result: ',s)\n",
-    "    \n",
-    "trapezoid(a,b,n)"
+    "\n",
+    "def f(x):\n",
+    "    return (math.e ** x / 2) * (math.cos(x) - math.sin(x))\n",
+    "\n",
+    "\n",
+    "def trapezoid(a, b, n):\n",
+    "    z = (b - a) / n\n",
+    "    i = a\n",
+    "    s = 0\n",
+    "    while (i + z) < b:\n",
+    "        s = s + f(i)\n",
+    "        i = i + z\n",
+    "    s = z * (f(a) + f(b)) / 2 + s\n",
+    "    print(\"Result: \", s)\n",
+    "\n",
+    "\n",
+    "trapezoid(a, b, n)"
    ]
   },
   {
