--- a/other/Video games analysis.ipynb
+++ b/other/Video games analysis.ipynb
@@ -537,7 +537,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('E:/videogame/Video_Games_Sales_as_at_22_Dec_2016.csv')\n",
+    "df = pd.read_csv(\"E:/videogame/Video_Games_Sales_as_at_22_Dec_2016.csv\")\n",
     "df.head(20)"
    ]
   },
@@ -558,7 +558,7 @@
     }
    ],
    "source": [
-    "df.shape #16719 rows, 16 columns. Get to know your data size for efficient analysis"
+    "df.shape  # 16719 rows, 16 columns. Get to know your data size for efficient analysis"
    ]
   },
   {
@@ -581,7 +581,7 @@
     }
    ],
    "source": [
-    "df.columns  #get all the columns"
+    "df.columns  # get all the columns"
    ]
   },
   {
@@ -590,8 +590,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rename the columns to avoid confusion.\n",
-    "df.rename(columns={'EU_Sales' : 'Europe_Sales', 'NA_Sales' : 'N.America_Sales', 'JP_Sales' : 'Japan_Sales'},  inplace=True)"
+    "# rename the columns to avoid confusion.\n",
+    "df.rename(\n",
+    "    columns={\n",
+    "        \"EU_Sales\": \"Europe_Sales\",\n",
+    "        \"NA_Sales\": \"N.America_Sales\",\n",
+    "        \"JP_Sales\": \"Japan_Sales\",\n",
+    "    },\n",
+    "    inplace=True,\n",
+    ")"
    ]
   },
   {
@@ -889,7 +896,7 @@
     }
    ],
    "source": [
-    "df.head(10) # take a look at the data.I have chosen first 7 rows"
+    "df.head(10)  # take a look at the data.I have chosen first 7 rows"
    ]
   },
   {
@@ -1095,7 +1102,7 @@
     }
    ],
    "source": [
-    "df.describe() #very important step in data analysis. Gives you a clear idea of sales and numerical figures"
+    "df.describe()  # very important step in data analysis. Gives you a clear idea of sales and numerical figures"
    ]
   },
   {
@@ -1116,9 +1123,9 @@
     }
    ],
    "source": [
-    "#filter out the game with most Global sales\n",
-    "filterr = (df['Global_Sales']==df['Global_Sales'].max())\n",
-    "df['Name'][filterr]  #Wii Sports rules"
+    "# filter out the game with most Global sales\n",
+    "filterr = df[\"Global_Sales\"] == df[\"Global_Sales\"].max()\n",
+    "df[\"Name\"][filterr]  # Wii Sports rules"
    ]
   },
   {
@@ -1149,7 +1156,7 @@
     }
    ],
    "source": [
-    "df['Publisher'].value_counts()"
+    "df[\"Publisher\"].value_counts()"
    ]
   },
   {
@@ -1473,9 +1480,9 @@
     }
    ],
    "source": [
-    "Publisher_get = df.groupby(['Publisher'])\n",
-    "Publisher_get.get_group('Electronic Arts')\n",
-    "#For the sports lovers. the data below gives you look at all the games by EA_Sports\n"
+    "Publisher_get = df.groupby([\"Publisher\"])\n",
+    "Publisher_get.get_group(\"Electronic Arts\")\n",
+    "# For the sports lovers. the data below gives you look at all the games by EA_Sports"
    ]
   },
   {
@@ -1496,9 +1503,9 @@
     }
    ],
    "source": [
-    "filt = (df['Japan_Sales']==df['Japan_Sales'].max())\n",
-    "df['Publisher'][filt]  #Nintendo company rules iN japan \n",
-    "#In other regions Wii game has the highest sales"
+    "filt = df[\"Japan_Sales\"] == df[\"Japan_Sales\"].max()\n",
+    "df[\"Publisher\"][filt]  # Nintendo company rules iN japan\n",
+    "# In other regions Wii game has the highest sales"
    ]
   },
   {
@@ -1516,8 +1523,10 @@
     }
    ],
    "source": [
-    "print(df['Japan_Sales'].isna().sum())\n",
-    "print(df['Publisher'].isna().sum()) #Publisher has a lot of empty values lets clean it up"
+    "print(df[\"Japan_Sales\"].isna().sum())\n",
+    "print(\n",
+    "    df[\"Publisher\"].isna().sum()\n",
+    ")  # Publisher has a lot of empty values lets clean it up"
    ]
   },
   {
@@ -1537,7 +1546,9 @@
     }
    ],
    "source": [
-    "type(np.nan) #Nan values create problems as they are float and rest of values are integers"
+    "type(\n",
+    "    np.nan\n",
+    ")  # Nan values create problems as they are float and rest of values are integers"
    ]
   },
   {
@@ -1567,16 +1578,28 @@
     }
    ],
    "source": [
-    "plt.style.use('fivethirtyeight')\n",
-    "fig = plt.figure(figsize=(25,25))\n",
-    "plt.plot(df['Name'].head(10), df['N.America_Sales'].head(10), color='red', label='N.America_Sales')\n",
-    "plt.plot(df['Name'].head(10), df['Japan_Sales'].head(10), color ='pink', label='Japan_Sales')\n",
-    "plt.plot(df['Name'].head(10), df['Europe_Sales'].head(10), color='yellow', label='Europe_Sales')\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
+    "fig = plt.figure(figsize=(25, 25))\n",
+    "plt.plot(\n",
+    "    df[\"Name\"].head(10),\n",
+    "    df[\"N.America_Sales\"].head(10),\n",
+    "    color=\"red\",\n",
+    "    label=\"N.America_Sales\",\n",
+    ")\n",
+    "plt.plot(\n",
+    "    df[\"Name\"].head(10), df[\"Japan_Sales\"].head(10), color=\"pink\", label=\"Japan_Sales\"\n",
+    ")\n",
+    "plt.plot(\n",
+    "    df[\"Name\"].head(10),\n",
+    "    df[\"Europe_Sales\"].head(10),\n",
+    "    color=\"yellow\",\n",
+    "    label=\"Europe_Sales\",\n",
+    ")\n",
     "plt.tight_layout()\n",
     "plt.legend()\n",
-    "plt.xlabel('Famous Games')\n",
-    "plt.ylabel('Sales')\n",
-    "plt.title('Popularity of Famous Games')"
+    "plt.xlabel(\"Famous Games\")\n",
+    "plt.ylabel(\"Sales\")\n",
+    "plt.title(\"Popularity of Famous Games\")"
    ]
   },
   {
@@ -1596,8 +1619,8 @@
     }
    ],
    "source": [
-    "df.Publisher = df.Publisher.fillna('')\n",
-    "df.Publisher.isna().sum() #Cleared Nan values with empty string"
+    "df.Publisher = df.Publisher.fillna(\"\")\n",
+    "df.Publisher.isna().sum()  # Cleared Nan values with empty string"
    ]
   },
   {
@@ -1606,9 +1629,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nin = (df['Publisher']=='Nintendo')\n",
-    "EA = (df['Publisher']=='Electronic Arts')\n",
-    "#filtering out EA sports and Nintendo to compare which compay dominates"
+    "Nin = df[\"Publisher\"] == \"Nintendo\"\n",
+    "EA = df[\"Publisher\"] == \"Electronic Arts\"\n",
+    "# filtering out EA sports and Nintendo to compare which compay dominates"
    ]
   },
   {
@@ -1628,11 +1651,11 @@
     }
    ],
    "source": [
-    "#Nintendo sales across various regions\n",
-    "print(df['Japan_Sales'][Nin].sum())\n",
-    "print(df['Europe_Sales'][Nin].sum())\n",
-    "print(df['N.America_Sales'][Nin].sum())\n",
-    "print(df['Global_Sales'][Nin].sum())"
+    "# Nintendo sales across various regions\n",
+    "print(df[\"Japan_Sales\"][Nin].sum())\n",
+    "print(df[\"Europe_Sales\"][Nin].sum())\n",
+    "print(df[\"N.America_Sales\"][Nin].sum())\n",
+    "print(df[\"Global_Sales\"][Nin].sum())"
    ]
   },
   {
@@ -1652,12 +1675,11 @@
     }
    ],
    "source": [
-    "#EA sales across various regions\n",
-    "print(df['Japan_Sales'][EA].sum())\n",
-    "print(df['Europe_Sales'][EA].sum())\n",
-    "print(df['N.America_Sales'][EA].sum())\n",
-    "print(df['Global_Sales'][EA].sum())\n",
-    "\n"
+    "# EA sales across various regions\n",
+    "print(df[\"Japan_Sales\"][EA].sum())\n",
+    "print(df[\"Europe_Sales\"][EA].sum())\n",
+    "print(df[\"N.America_Sales\"][EA].sum())\n",
+    "print(df[\"Global_Sales\"][EA].sum())"
    ]
   },
   {
@@ -1689,8 +1711,8 @@
     }
    ],
    "source": [
-    "#Lets analyse the Genre of Video Games which are popular\n",
-    "df['Genre'].value_counts()"
+    "# Lets analyse the Genre of Video Games which are popular\n",
+    "df[\"Genre\"].value_counts()"
    ]
   },
   {
@@ -1699,7 +1721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Genre'].fillna('Unknown', inplace = True) #Nan values replaced with \"Unknown string\""
+    "df[\"Genre\"].fillna(\"Unknown\", inplace=True)  # Nan values replaced with \"Unknown string\""
    ]
   },
   {
@@ -1708,7 +1730,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ['Action', 'Sports', 'Misc', 'Role-Playing', 'Shooter', 'Adventure', 'Racing', 'Platform', 'Simulation', 'Fighting', 'Strategy', 'Puzzle', 'Unknown']            "
+    "labels = [\n",
+    "    \"Action\",\n",
+    "    \"Sports\",\n",
+    "    \"Misc\",\n",
+    "    \"Role-Playing\",\n",
+    "    \"Shooter\",\n",
+    "    \"Adventure\",\n",
+    "    \"Racing\",\n",
+    "    \"Platform\",\n",
+    "    \"Simulation\",\n",
+    "    \"Fighting\",\n",
+    "    \"Strategy\",\n",
+    "    \"Puzzle\",\n",
+    "    \"Unknown\",\n",
+    "]"
    ]
   },
   {
@@ -1728,11 +1764,16 @@
     }
    ],
    "source": [
-    "#Most popular games produced are of Action Genre followed by Sports\n",
-    "plt.style.use('fivethirtyeight')\n",
-    "fig = plt.figure(figsize=(11,11))\n",
-    "plt.pie(list(df['Genre'].value_counts()), autopct='%1.1f%%', labels=labels, wedgeprops={'edgecolor':'black'})\n",
-    "plt.title('Most Popular Genres in Video Games')\n",
+    "# Most popular games produced are of Action Genre followed by Sports\n",
+    "plt.style.use(\"fivethirtyeight\")\n",
+    "fig = plt.figure(figsize=(11, 11))\n",
+    "plt.pie(\n",
+    "    list(df[\"Genre\"].value_counts()),\n",
+    "    autopct=\"%1.1f%%\",\n",
+    "    labels=labels,\n",
+    "    wedgeprops={\"edgecolor\": \"black\"},\n",
+    ")\n",
+    "plt.title(\"Most Popular Genres in Video Games\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1774,9 +1815,9 @@
     }
    ],
    "source": [
-    "t  = sns.pairplot(df)\n",
-    "t \n",
-    "#analyse the paiplots"
+    "t = sns.pairplot(df)\n",
+    "t\n",
+    "# analyse the paiplots"
    ]
   },
   {
@@ -1807,7 +1848,7 @@
     }
    ],
    "source": [
-    "df['Critic_Score']"
+    "df[\"Critic_Score\"]"
    ]
   },
   {
@@ -1827,7 +1868,7 @@
     }
    ],
    "source": [
-    "df['Critic_Score'].isna().sum() #lots of values in Critic score"
+    "df[\"Critic_Score\"].isna().sum()  # lots of values in Critic score"
    ]
   },
   {
@@ -1847,7 +1888,7 @@
     }
    ],
    "source": [
-    "df['Critic_Score'].median()"
+    "df[\"Critic_Score\"].median()"
    ]
   },
   {
@@ -1856,8 +1897,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Replace Nan values in Critic_score with median Values\n",
-    "df['Critic_Score'].fillna(71, inplace=True)"
+    "# Replace Nan values in Critic_score with median Values\n",
+    "df[\"Critic_Score\"].fillna(71, inplace=True)"
    ]
   },
   {
@@ -1877,7 +1918,7 @@
     }
    ],
    "source": [
-    "df['Critic_Score'].max()"
+    "df[\"Critic_Score\"].max()"
    ]
   },
   {
@@ -1886,7 +1927,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtera = (df['Critic_Score']==df['Critic_Score'].max())\n"
+    "filtera = df[\"Critic_Score\"] == df[\"Critic_Score\"].max()"
    ]
   },
   {
@@ -1910,7 +1951,7 @@
     }
    ],
    "source": [
-    "df['Name'][filtera] #best games according to critic scores"
+    "df[\"Name\"][filtera]  # best games according to critic scores"
    ]
   },
   {
@@ -1959,7 +2000,7 @@
     }
    ],
    "source": [
-    "df['Rating'].value_counts()"
+    "df[\"Rating\"].value_counts()"
    ]
   },
   {
@@ -1979,7 +2020,7 @@
     }
    ],
    "source": [
-    "df['Rating'].isna().sum() #Nan values which create the problems"
+    "df[\"Rating\"].isna().sum()  # Nan values which create the problems"
    ]
   },
   {
@@ -2010,9 +2051,9 @@
     }
    ],
    "source": [
-    "games_with_no_rating  = df['Rating'].isna()\n",
-    "df['Name'][games_with_no_rating] \n",
-    "#the games with no ratings are mostly normal games which everyone can play and not adult games"
+    "games_with_no_rating = df[\"Rating\"].isna()\n",
+    "df[\"Name\"][games_with_no_rating]\n",
+    "# the games with no ratings are mostly normal games which everyone can play and not adult games"
    ]
   },
   {
@@ -2032,10 +2073,10 @@
     }
    ],
    "source": [
-    "#Replace Nan values with E Rating i.e Everyone can play it\n",
-    "df['Rating'].fillna('E', inplace=True)\n",
-    "df['Rating'].value_counts()\n",
-    "list(df['Rating'].value_counts())"
+    "# Replace Nan values with E Rating i.e Everyone can play it\n",
+    "df[\"Rating\"].fillna(\"E\", inplace=True)\n",
+    "df[\"Rating\"].value_counts()\n",
+    "list(df[\"Rating\"].value_counts())"
    ]
   },
   {
@@ -2066,12 +2107,13 @@
    ],
    "source": [
     "from collections import Counter\n",
-    "a = list(df['Rating'])\n",
+    "\n",
+    "a = list(df[\"Rating\"])\n",
     "letter_counts = Counter(a)\n",
-    "d = pd.DataFrame.from_dict(letter_counts, orient='index')\n",
+    "d = pd.DataFrame.from_dict(letter_counts, orient=\"index\")\n",
     "\n",
     "\n",
-    "d.plot(kind='bar')"
+    "d.plot(kind=\"bar\")"
    ]
   },
   {
@@ -2080,7 +2122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#In the above Barplot E rating dominates which signifies most games made in industries are for people of all ages."
+    "# In the above Barplot E rating dominates which signifies most games made in industries are for people of all ages."
    ]
   },
   {
@@ -2413,7 +2455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Year_of_Release'] = pd.to_datetime(df['Year_of_Release'], format='%Y')"
+    "df[\"Year_of_Release\"] = pd.to_datetime(df[\"Year_of_Release\"], format=\"%Y\")"
    ]
   },
   {
@@ -2433,7 +2475,7 @@
     }
    ],
    "source": [
-    "df['Year_of_Release'].min()"
+    "df[\"Year_of_Release\"].min()"
    ]
   },
   {
@@ -2453,7 +2495,7 @@
     }
    ],
    "source": [
-    "df['Year_of_Release'].max()"
+    "df[\"Year_of_Release\"].max()"
    ]
   },
   {
