--- a/other/clothing_detection.ipynb
+++ b/other/clothing_detection.ipynb
@@ -8,9 +8,9 @@
    },
    "outputs": [],
    "source": [
-    "#Importing Packages\n",
-    "from tensorflow import keras \n",
-    "import numpy as np           \n",
+    "# Importing Packages\n",
+    "from tensorflow import keras\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -35,16 +35,27 @@
     }
    ],
    "source": [
-    "#Importing Keras Dataset\n",
+    "# Importing Keras Dataset\n",
     "data = keras.datasets.fashion_mnist\n",
     "\n",
-    "#train and test data segregation\n",
+    "# train and test data segregation\n",
     "(train_images, train_labels), (test_images, test_labels) = data.load_data()\n",
     "\n",
-    "class_names = [\"T-shirt/top\", \"Trouser\", \"Pullover\", \"Dress\", \"Coat\", \"Sandal\", \"Shirt\", \"Sneaker\", \"Bag\", \"Ankle Boot\"]\n",
+    "class_names = [\n",
+    "    \"T-shirt/top\",\n",
+    "    \"Trouser\",\n",
+    "    \"Pullover\",\n",
+    "    \"Dress\",\n",
+    "    \"Coat\",\n",
+    "    \"Sandal\",\n",
+    "    \"Shirt\",\n",
+    "    \"Sneaker\",\n",
+    "    \"Bag\",\n",
+    "    \"Ankle Boot\",\n",
+    "]\n",
     "\n",
-    "train_images = train_images/255.0\n",
-    "test_images = test_images/255.0"
+    "train_images = train_images / 255.0\n",
+    "test_images = test_images / 255.0"
    ]
   },
   {
@@ -83,15 +94,19 @@
     }
    ],
    "source": [
-    "#Create a object of model class\n",
-    "model = keras.Sequential([\n",
-    "    keras.layers.Flatten(input_shape=(28,28)),\n",
-    "    keras.layers.Dense(128, activation=\"relu\"),\n",
-    "    keras.layers.Dense(10, activation=\"softmax\")\n",
-    "])\n",
-    "#Compile the model with MSE loss and Adam optimizer\n",
-    "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
-    "#fitting the model\n",
+    "# Create a object of model class\n",
+    "model = keras.Sequential(\n",
+    "    [\n",
+    "        keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "        keras.layers.Dense(128, activation=\"relu\"),\n",
+    "        keras.layers.Dense(10, activation=\"softmax\"),\n",
+    "    ]\n",
+    ")\n",
+    "# Compile the model with MSE loss and Adam optimizer\n",
+    "model.compile(\n",
+    "    optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"]\n",
+    ")\n",
+    "# fitting the model\n",
     "model.fit(train_images, train_labels, epochs=5)"
    ]
   },
@@ -194,12 +209,12 @@
     }
    ],
    "source": [
-    "#model evaluation\n",
+    "# model evaluation\n",
     "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
     "print(\"Accuracy: \", test_acc)\n",
     "\n",
     "prediction = model.predict(test_images)\n",
-    "#displaying predictions\n",
+    "# displaying predictions\n",
     "for i in range(7):\n",
     "    plt.grid(False)\n",
     "    plt.imshow(test_images[i], cmap=plt.cm.binary)\n",
