--- a/other/food_wastage_analysis_from_1961-2013_fao.ipynb
+++ b/other/food_wastage_analysis_from_1961-2013_fao.ipynb
@@ -44,9 +44,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "%matplotlib inline\n",
     "# importing data\n",
-    "df = pd.read_csv(\"FAO.csv\",  encoding = \"ISO-8859-1\")\n",
+    "df = pd.read_csv(\"FAO.csv\", encoding=\"ISO-8859-1\")\n",
     "pd.options.mode.chained_assignment = None\n",
     "from sklearn.linear_model import LinearRegression"
    ]
@@ -3673,18 +3674,24 @@
     }
    ],
    "source": [
-    "area_list = list(df['Area'].unique())\n",
-    "year_list = list(df.iloc[:,10:].columns)\n",
+    "area_list = list(df[\"Area\"].unique())\n",
+    "year_list = list(df.iloc[:, 10:].columns)\n",
     "\n",
-    "plt.figure(figsize=(24,12))\n",
+    "plt.figure(figsize=(24, 12))\n",
     "for ar in area_list:\n",
     "    yearly_produce = []\n",
     "    for yr in year_list:\n",
-    "        yearly_produce.append(df[yr][df['Area'] == ar].sum())\n",
+    "        yearly_produce.append(df[yr][df[\"Area\"] == ar].sum())\n",
     "    plt.plot(yearly_produce, label=ar)\n",
     "plt.xticks(np.arange(53), tuple(year_list), rotation=60)\n",
-    "plt.legend(bbox_to_anchor=(0., 1.02, 1., .102), loc=3, ncol=8, mode=\"expand\", borderaxespad=0.)\n",
-    "plt.savefig('p.png')\n",
+    "plt.legend(\n",
+    "    bbox_to_anchor=(0.0, 1.02, 1.0, 0.102),\n",
+    "    loc=3,\n",
+    "    ncol=8,\n",
+    "    mode=\"expand\",\n",
+    "    borderaxespad=0.0,\n",
+    ")\n",
+    "plt.savefig(\"p.png\")\n",
     "plt.show()"
    ]
   },
@@ -3714,7 +3721,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(24,12))"
+    "plt.figure(figsize=(24, 12))"
    ]
   },
   {
@@ -3821,7 +3828,18 @@
     }
    ],
    "source": [
-    "sns.factorplot(\"Area\", data=df[(df['Area'] == \"India\") | (df['Area'] == \"China, mainland\") | (df['Area'] == \"United States of America\")], kind=\"count\", hue=\"Element\", size=8, aspect=.8)"
+    "sns.factorplot(\n",
+    "    \"Area\",\n",
+    "    data=df[\n",
+    "        (df[\"Area\"] == \"India\")\n",
+    "        | (df[\"Area\"] == \"China, mainland\")\n",
+    "        | (df[\"Area\"] == \"United States of America\")\n",
+    "    ],\n",
+    "    kind=\"count\",\n",
+    "    hue=\"Element\",\n",
+    "    size=8,\n",
+    "    aspect=0.8,\n",
+    ")"
    ]
   },
   {
@@ -4072,7 +4090,7 @@
     "for ar in area_list:\n",
     "    yearly_produce = []\n",
     "    for yr in year_list:\n",
-    "        yearly_produce.append(df[yr][df['Area']==ar].sum())\n",
+    "        yearly_produce.append(df[yr][df[\"Area\"] == ar].sum())\n",
     "    new_df_dict[ar] = yearly_produce\n",
     "new_df = pd.DataFrame(new_df_dict)\n",
     "\n",
@@ -4541,10 +4559,10 @@
    "source": [
     "mean_produce = []\n",
     "for i in range(174):\n",
-    "    mean_produce.append(new_df.iloc[i,:].values.mean())\n",
-    "new_df['Mean_Produce'] = mean_produce\n",
+    "    mean_produce.append(new_df.iloc[i, :].values.mean())\n",
+    "new_df[\"Mean_Produce\"] = mean_produce\n",
     "\n",
-    "new_df['Rank'] = new_df['Mean_Produce'].rank(ascending=False)\n",
+    "new_df[\"Rank\"] = new_df[\"Mean_Produce\"].rank(ascending=False)\n",
     "\n",
     "new_df.head()"
    ]
@@ -4568,16 +4586,16 @@
    },
    "outputs": [],
    "source": [
-    "item_list = list(df['Item'].unique())\n",
+    "item_list = list(df[\"Item\"].unique())\n",
     "\n",
     "item_df = pd.DataFrame()\n",
-    "item_df['Item_Name'] = item_list\n",
+    "item_df[\"Item_Name\"] = item_list\n",
     "\n",
     "for yr in year_list:\n",
     "    item_produce = []\n",
     "    for it in item_list:\n",
-    "        item_produce.append(df[yr][df['Item']==it].sum())\n",
-    "    item_df[yr] = item_produce\n"
+    "        item_produce.append(df[yr][df[\"Item\"] == it].sum())\n",
+    "    item_df[yr] = item_produce"
    ]
   },
   {
@@ -5026,9 +5044,9 @@
    "source": [
     "sum_col = []\n",
     "for i in range(115):\n",
-    "    sum_col.append(item_df.iloc[i,1:].values.sum())\n",
-    "item_df['Sum'] = sum_col\n",
-    "item_df['Production_Rank'] = item_df['Sum'].rank(ascending=False)\n",
+    "    sum_col.append(item_df.iloc[i, 1:].values.sum())\n",
+    "item_df[\"Sum\"] = sum_col\n",
+    "item_df[\"Production_Rank\"] = item_df[\"Sum\"].rank(ascending=False)\n",
     "\n",
     "item_df.head()"
    ]
@@ -5073,7 +5091,7 @@
     }
    ],
    "source": [
-    "item_df['Item_Name'][item_df['Production_Rank'] < 11.0].sort_values()"
+    "item_df[\"Item_Name\"][item_df[\"Production_Rank\"] < 11.0].sort_values()"
    ]
   },
   {
@@ -5120,7 +5138,25 @@
     }
    ],
    "source": [
-    "sns.factorplot(\"Item\", data=df[(df['Item']=='Wheat and products') | (df['Item']=='Rice (Milled Equivalent)') | (df['Item']=='Maize and products') | (df['Item']=='Potatoes and products') | (df['Item']=='Vegetables, Other') | (df['Item']=='Milk - Excluding Butter') | (df['Item']=='Cereals - Excluding Beer') | (df['Item']=='Starchy Roots') | (df['Item']=='Vegetables') | (df['Item']=='Fruits - Excluding Wine')], kind=\"count\", hue=\"Element\", size=20, aspect=.8)\n",
+    "sns.factorplot(\n",
+    "    \"Item\",\n",
+    "    data=df[\n",
+    "        (df[\"Item\"] == \"Wheat and products\")\n",
+    "        | (df[\"Item\"] == \"Rice (Milled Equivalent)\")\n",
+    "        | (df[\"Item\"] == \"Maize and products\")\n",
+    "        | (df[\"Item\"] == \"Potatoes and products\")\n",
+    "        | (df[\"Item\"] == \"Vegetables, Other\")\n",
+    "        | (df[\"Item\"] == \"Milk - Excluding Butter\")\n",
+    "        | (df[\"Item\"] == \"Cereals - Excluding Beer\")\n",
+    "        | (df[\"Item\"] == \"Starchy Roots\")\n",
+    "        | (df[\"Item\"] == \"Vegetables\")\n",
+    "        | (df[\"Item\"] == \"Fruits - Excluding Wine\")\n",
+    "    ],\n",
+    "    kind=\"count\",\n",
+    "    hue=\"Element\",\n",
+    "    size=20,\n",
+    "    aspect=0.8,\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -5167,8 +5203,8 @@
     }
    ],
    "source": [
-    "year_df = df.iloc[:,10:]\n",
-    "fig, ax = plt.subplots(figsize=(16,10))\n",
+    "year_df = df.iloc[:, 10:]\n",
+    "fig, ax = plt.subplots(figsize=(16, 10))\n",
     "sns.heatmap(year_df.corr(), ax=ax)"
    ]
   },
@@ -5212,11 +5248,13 @@
     }
    ],
    "source": [
-    "f, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2, sharex='col', sharey='row', figsize=(10,10))\n",
-    "ax1.set(xlabel='Y1968', ylabel='Y1961')\n",
-    "ax2.set(xlabel='Y1968', ylabel='Y1963')\n",
-    "ax3.set(xlabel='Y1968', ylabel='Y1986')\n",
-    "ax4.set(xlabel='Y1968', ylabel='Y2013')\n",
+    "f, ((ax1, ax2), (ax3, ax4)) = plt.subplots(\n",
+    "    2, 2, sharex=\"col\", sharey=\"row\", figsize=(10, 10)\n",
+    ")\n",
+    "ax1.set(xlabel=\"Y1968\", ylabel=\"Y1961\")\n",
+    "ax2.set(xlabel=\"Y1968\", ylabel=\"Y1963\")\n",
+    "ax3.set(xlabel=\"Y1968\", ylabel=\"Y1986\")\n",
+    "ax4.set(xlabel=\"Y1968\", ylabel=\"Y2013\")\n",
     "sns.jointplot(x=\"Y1968\", y=\"Y1961\", data=df, kind=\"reg\", ax=ax1)\n",
     "sns.jointplot(x=\"Y1968\", y=\"Y1963\", data=df, kind=\"reg\", ax=ax2)\n",
     "sns.jointplot(x=\"Y1968\", y=\"Y1986\", data=df, kind=\"reg\", ax=ax3)\n",
@@ -5261,9 +5299,9 @@
     }
    ],
    "source": [
-    "new_item_df = item_df.drop([\"Item_Name\",\"Sum\",\"Production_Rank\"], axis = 1)\n",
-    "fig, ax = plt.subplots(figsize=(12,24))\n",
-    "sns.heatmap(new_item_df,ax=ax)\n",
+    "new_item_df = item_df.drop([\"Item_Name\", \"Sum\", \"Production_Rank\"], axis=1)\n",
+    "fig, ax = plt.subplots(figsize=(12, 24))\n",
+    "sns.heatmap(new_item_df, ax=ax)\n",
     "ax.set_yticklabels(item_df.Item_Name.values[::-1])\n",
     "plt.show()"
    ]
@@ -5572,7 +5610,7 @@
     }
    ],
    "source": [
-    "X = new_df.iloc[:,:-2].values\n",
+    "X = new_df.iloc[:, :-2].values\n",
     "\n",
     "X = pd.DataFrame(X)\n",
     "X = X.convert_objects(convert_numeric=True)\n",
@@ -5614,15 +5652,18 @@
    ],
    "source": [
     "from sklearn.cluster import KMeans\n",
+    "\n",
     "wcss = []\n",
-    "for i in range(1,11):\n",
-    "    kmeans = KMeans(n_clusters=i,init='k-means++',max_iter=300,n_init=10,random_state=0)\n",
+    "for i in range(1, 11):\n",
+    "    kmeans = KMeans(\n",
+    "        n_clusters=i, init=\"k-means++\", max_iter=300, n_init=10, random_state=0\n",
+    "    )\n",
     "    kmeans.fit(X)\n",
     "    wcss.append(kmeans.inertia_)\n",
-    "plt.plot(range(1,11),wcss)\n",
-    "plt.title('The Elbow Method')\n",
-    "plt.xlabel('Number of clusters')\n",
-    "plt.ylabel('WCSS')\n",
+    "plt.plot(range(1, 11), wcss)\n",
+    "plt.title(\"The Elbow Method\")\n",
+    "plt.xlabel(\"Number of clusters\")\n",
+    "plt.ylabel(\"WCSS\")\n",
     "plt.show()"
    ]
   },
@@ -5655,7 +5696,7 @@
     }
    ],
    "source": [
-    "kmeans = KMeans(n_clusters=2,init='k-means++',max_iter=300,n_init=10,random_state=0) \n",
+    "kmeans = KMeans(n_clusters=2, init=\"k-means++\", max_iter=300, n_init=10, random_state=0)\n",
     "y_kmeans = kmeans.fit_predict(X)\n",
     "\n",
     "X = X.as_matrix(columns=None)"
@@ -5693,10 +5734,22 @@
     }
    ],
    "source": [
-    "plt.scatter(X[y_kmeans == 0, 0], X[y_kmeans == 0,1],s=100,c='red',label='Others')\n",
-    "plt.scatter(X[y_kmeans == 1, 0], X[y_kmeans == 1,1],s=100,c='blue',label='China(mainland),USA,India')\n",
-    "plt.scatter(kmeans.cluster_centers_[:,0],kmeans.cluster_centers_[:,1],s=300,c='yellow',label='Centroids')\n",
-    "plt.title('Clusters of countries by Productivity')\n",
+    "plt.scatter(X[y_kmeans == 0, 0], X[y_kmeans == 0, 1], s=100, c=\"red\", label=\"Others\")\n",
+    "plt.scatter(\n",
+    "    X[y_kmeans == 1, 0],\n",
+    "    X[y_kmeans == 1, 1],\n",
+    "    s=100,\n",
+    "    c=\"blue\",\n",
+    "    label=\"China(mainland),USA,India\",\n",
+    ")\n",
+    "plt.scatter(\n",
+    "    kmeans.cluster_centers_[:, 0],\n",
+    "    kmeans.cluster_centers_[:, 1],\n",
+    "    s=300,\n",
+    "    c=\"yellow\",\n",
+    "    label=\"Centroids\",\n",
+    ")\n",
+    "plt.title(\"Clusters of countries by Productivity\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -5764,80 +5817,79 @@
     }
    ],
    "source": [
-    "india_list=[]\n",
-    "year_list = list(df.iloc[:,10:].columns)\n",
+    "india_list = []\n",
+    "year_list = list(df.iloc[:, 10:].columns)\n",
     "for i in year_list:\n",
-    "    x=df[(df.Area=='India') & (df.Element=='Food')][i].mean()\n",
-    "    india_list.append(x)    \n",
+    "    x = df[(df.Area == \"India\") & (df.Element == \"Food\")][i].mean()\n",
+    "    india_list.append(x)\n",
     "\n",
-    "reset=[]\n",
+    "reset = []\n",
     "for i in year_list:\n",
     "    reset.append(int(i[1:]))\n",
     "\n",
     "\n",
-    "reset=np.array(reset)\n",
-    "reset=reset.reshape(-1,1)\n",
+    "reset = np.array(reset)\n",
+    "reset = reset.reshape(-1, 1)\n",
     "\n",
     "\n",
-    "india_list=np.array(india_list)\n",
-    "india_list=india_list.reshape(-1,1)\n",
+    "india_list = np.array(india_list)\n",
+    "india_list = india_list.reshape(-1, 1)\n",
     "\n",
     "\n",
     "reg = LinearRegression()\n",
-    "reg.fit(reset,india_list)\n",
+    "reg.fit(reset, india_list)\n",
     "predictions = reg.predict(reset)\n",
     "plt.title(\"India\")\n",
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Production\")\n",
-    "plt.scatter(reset,india_list)\n",
-    "plt.plot(reset,predictions)\n",
+    "plt.scatter(reset, india_list)\n",
+    "plt.plot(reset, predictions)\n",
     "plt.show()\n",
     "print(reg.predict(2020))\n",
     "\n",
-    "df[(df.Area=='India') & (df.Element=='Food')]['Y1961'].mean()\n",
+    "df[(df.Area == \"India\") & (df.Element == \"Food\")][\"Y1961\"].mean()\n",
     "\n",
-    "df[(df.Area=='Pakistan') & (df.Element=='Food')]\n",
+    "df[(df.Area == \"Pakistan\") & (df.Element == \"Food\")]\n",
     "\n",
-    "Pak_list=[]\n",
-    "year_list = list(df.iloc[:,10:].columns)\n",
+    "Pak_list = []\n",
+    "year_list = list(df.iloc[:, 10:].columns)\n",
     "for i in year_list:\n",
-    "    yx=df[(df.Area=='Pakistan') & (df.Element=='Food')][i].mean()\n",
-    "    Pak_list.append(yx)   \n",
+    "    yx = df[(df.Area == \"Pakistan\") & (df.Element == \"Food\")][i].mean()\n",
+    "    Pak_list.append(yx)\n",
     "\n",
-    "Pak_list=np.array(Pak_list)\n",
-    "Pak_list=Pak_list.reshape(-1,1)\n",
+    "Pak_list = np.array(Pak_list)\n",
+    "Pak_list = Pak_list.reshape(-1, 1)\n",
     "Pak_list\n",
     "reg = LinearRegression()\n",
-    "reg.fit(reset,Pak_list)\n",
+    "reg.fit(reset, Pak_list)\n",
     "predictions = reg.predict(reset)\n",
     "plt.title(\"Pakistan\")\n",
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Production\")\n",
-    "plt.scatter(reset,Pak_list)\n",
-    "plt.plot(reset,predictions)\n",
+    "plt.scatter(reset, Pak_list)\n",
+    "plt.plot(reset, predictions)\n",
     "plt.show()\n",
     "print(reg.predict(2020))\n",
     "\n",
     "\n",
-    "\n",
-    "usa_list=[]\n",
-    "year_list = list(df.iloc[:,10:].columns)\n",
+    "usa_list = []\n",
+    "year_list = list(df.iloc[:, 10:].columns)\n",
     "for i in year_list:\n",
-    "    xu=df[(df.Area=='United States of America') & (df.Element=='Food')][i].mean()\n",
+    "    xu = df[(df.Area == \"United States of America\") & (df.Element == \"Food\")][i].mean()\n",
     "    usa_list.append(xu)\n",
     "\n",
-    "usa_list=np.array(usa_list)\n",
-    "usa_list=india_list.reshape(-1,1)\n",
+    "usa_list = np.array(usa_list)\n",
+    "usa_list = india_list.reshape(-1, 1)\n",
     "\n",
     "\n",
     "reg = LinearRegression()\n",
-    "reg.fit(reset,usa_list)\n",
+    "reg.fit(reset, usa_list)\n",
     "predictions = reg.predict(reset)\n",
     "plt.title(\"USA\")\n",
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Production\")\n",
-    "plt.scatter(reset,usa_list)\n",
-    "plt.plot(reset,predictions)\n",
+    "plt.scatter(reset, usa_list)\n",
+    "plt.plot(reset, predictions)\n",
     "plt.show()\n",
     "print(reg.predict(2020))"
    ]
