--- a/machine_learning/Decision tree/Decision_Tree.ipynb
+++ b/machine_learning/Decision tree/Decision_Tree.ipynb
@@ -235,9 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importing libraries\n",
-    "import numpy as np\n",
-    "\n"
+    "# Importing libraries\n",
+    "import numpy as np"
    ]
   },
   {
@@ -246,16 +245,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importing data set\n",
+    "# Importing data set\n",
     "from sklearn.datasets import load_breast_cancer\n",
+    "\n",
     "data = load_breast_cancer()\n",
     "\n",
     "\n",
-    "X=data['data']\n",
-    "Y=data['target']\n",
-    "Y=np.reshape(Y,(Y.shape[0],1))\n",
-    "X=X[:,:5]\n",
-    "X=np.append(X,Y,axis=1)"
+    "X = data[\"data\"]\n",
+    "Y = data[\"target\"]\n",
+    "Y = np.reshape(Y, (Y.shape[0], 1))\n",
+    "X = X[:, :5]\n",
+    "X = np.append(X, Y, axis=1)"
    ]
   },
   {
@@ -264,12 +264,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Separating training set and test set\n",
-    "sz = len(X)//4\n",
-    "X_test=X[:sz,:]\n",
-    "X_train=X[sz:,:]   #X_train already contains Y_train as its last column so no need to define it separately\n",
-    "Y_test=X_test[:,-1]\n",
-    "n=X.shape[1]"
+    "# Separating training set and test set\n",
+    "sz = len(X) // 4\n",
+    "X_test = X[:sz, :]\n",
+    "X_train = X[\n",
+    "    sz:, :\n",
+    "]  # X_train already contains Y_train as its last column so no need to define it separately\n",
+    "Y_test = X_test[:, -1]\n",
+    "n = X.shape[1]"
    ]
   },
   {
@@ -278,8 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Training the algorithm\n",
-    "train=D_TREE()\n",
+    "# Training the algorithm\n",
+    "train = D_TREE()\n",
     "train.fit(X_train)"
    ]
   },
@@ -289,8 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Predictions on test data\n",
-    "y_pred=train.pred(X_test)"
+    "# Predictions on test data\n",
+    "y_pred = train.pred(X_test)"
    ]
   },
   {
@@ -316,9 +318,9 @@
     }
    ],
    "source": [
-    "#A few predictions\n",
+    "# A few predictions\n",
     "for i in range(10):\n",
-    "    train.print_leaf(train.check_testing_data(X_test[i],train.my_tree))"
+    "    train.print_leaf(train.check_testing_data(X_test[i], train.my_tree))"
    ]
   },
   {
@@ -335,7 +337,7 @@
     }
    ],
    "source": [
-    "print(\"Accuracy of my model : \",train.accuracy(Y_test,y_pred),\"%\")"
+    "print(\"Accuracy of my model : \", train.accuracy(Y_test, y_pred), \"%\")"
    ]
   },
   {
@@ -352,13 +354,14 @@
     }
    ],
    "source": [
-    "#calculating accuracy using sklearn model\n",
+    "# calculating accuracy using sklearn model\n",
     "from sklearn import tree\n",
+    "\n",
     "clf = tree.DecisionTreeClassifier()\n",
-    "clf = clf.fit(X_train[:,0:n-1], Y_train)\n",
-    "y_pred=clf.predict(X_test[:,:n-1])\n",
-    "error=(y_pred==Y_test.flatten())\n",
-    "print(\"accuracy of sklearn model = \",np.mean(error)*100,\"%\")"
+    "clf = clf.fit(X_train[:, 0 : n - 1], Y_train)\n",
+    "y_pred = clf.predict(X_test[:, : n - 1])\n",
+    "error = y_pred == Y_test.flatten()\n",
+    "print(\"accuracy of sklearn model = \", np.mean(error) * 100, \"%\")"
    ]
   }
  ],
