--- a/machine_learning/Linear_Regression/linear_regression_using_pandas.ipynb
+++ b/machine_learning/Linear_Regression/linear_regression_using_pandas.ipynb
@@ -39,8 +39,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data_path=\"./data/RILO - Copy.csv\"\n",
-    "data=pd.read_csv(data_path)\n",
+    "data_path = \"./data/RILO - Copy.csv\"\n",
+    "data = pd.read_csv(data_path)\n",
     "data"
    ]
   },
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Renaming the columns to have snake_case naming style. (Just as a convention and for convenience)\n",
-    "data.columns=[\"_\".join(column.lower().split()) for column in data.columns]\n",
+    "data.columns = [\"_\".join(column.lower().split()) for column in data.columns]\n",
     "data.columns"
    ]
   },
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# By using the correlation method `.corr()` we can get the relationship between each continuous variable:\n",
-    "correlation=data.corr()\n",
+    "correlation = data.corr()\n",
     "correlation"
    ]
   },
@@ -120,8 +120,8 @@
     "import seaborn as sn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.figure(figsize=(10,8))\n",
-    "sn.heatmap(correlation,annot=True,linewidth=1,cmap='PuOr')\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sn.heatmap(correlation, annot=True, linewidth=1, cmap=\"PuOr\")\n",
     "plt.show()"
    ]
   },
@@ -155,43 +155,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(18,18))\n",
+    "plt.figure(figsize=(18, 18))\n",
     "\n",
-    "plt.subplot(3,3,1)\n",
-    "plt.scatter(data.prev_close,data.high_price)\n",
-    "plt.title('Relation with Previous Closing Price')\n",
+    "plt.subplot(3, 3, 1)\n",
+    "plt.scatter(data.prev_close, data.high_price)\n",
+    "plt.title(\"Relation with Previous Closing Price\")\n",
     "\n",
-    "plt.subplot(3,3,2)\n",
-    "plt.scatter(data['no._of_trades'],data.high_price)\n",
-    "plt.title('Relation with No. of trades')\n",
+    "plt.subplot(3, 3, 2)\n",
+    "plt.scatter(data[\"no._of_trades\"], data.high_price)\n",
+    "plt.title(\"Relation with No. of trades\")\n",
     "\n",
-    "plt.subplot(3,3,3)\n",
-    "plt.scatter(data.open_price,data.high_price)\n",
-    "plt.title('Relation with Opening Price')\n",
+    "plt.subplot(3, 3, 3)\n",
+    "plt.scatter(data.open_price, data.high_price)\n",
+    "plt.title(\"Relation with Opening Price\")\n",
     "\n",
-    "plt.subplot(3,3,4)\n",
-    "plt.scatter(data.low_price,data.high_price)\n",
-    "plt.title('Relation with Low Price')\n",
+    "plt.subplot(3, 3, 4)\n",
+    "plt.scatter(data.low_price, data.high_price)\n",
+    "plt.title(\"Relation with Low Price\")\n",
     "\n",
-    "plt.subplot(3,3,5)\n",
-    "plt.scatter(data.last_price,data.high_price)\n",
-    "plt.title('Relation with Last Price')\n",
+    "plt.subplot(3, 3, 5)\n",
+    "plt.scatter(data.last_price, data.high_price)\n",
+    "plt.title(\"Relation with Last Price\")\n",
     "\n",
-    "plt.subplot(3,3,6)\n",
-    "plt.scatter(data.turnover,data.high_price)\n",
-    "plt.title('Relation with Turnover')\n",
+    "plt.subplot(3, 3, 6)\n",
+    "plt.scatter(data.turnover, data.high_price)\n",
+    "plt.title(\"Relation with Turnover\")\n",
     "\n",
-    "plt.subplot(3,3,7)\n",
-    "plt.scatter(data.close_price,data.high_price)\n",
-    "plt.title('Relation with Closing Price')\n",
+    "plt.subplot(3, 3, 7)\n",
+    "plt.scatter(data.close_price, data.high_price)\n",
+    "plt.title(\"Relation with Closing Price\")\n",
     "\n",
-    "plt.subplot(3,3,8)\n",
-    "plt.scatter(data['%_dly_qt_to_traded_qty'],data.high_price)\n",
-    "plt.title('Relation with Deliverable quantity')\n",
+    "plt.subplot(3, 3, 8)\n",
+    "plt.scatter(data[\"%_dly_qt_to_traded_qty\"], data.high_price)\n",
+    "plt.title(\"Relation with Deliverable quantity\")\n",
     "\n",
-    "plt.subplot(3,3,9)\n",
-    "plt.scatter(data.average_price,data.high_price)\n",
-    "plt.title('Relation with Average Price')\n",
+    "plt.subplot(3, 3, 9)\n",
+    "plt.scatter(data.average_price, data.high_price)\n",
+    "plt.title(\"Relation with Average Price\")\n",
     "\n",
     "plt.show"
    ]
@@ -219,8 +219,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features=['prev_close','open_price','low_price','last_price','close_price','average_price']\n",
-    "X=data[features]\n",
+    "features = [\n",
+    "    \"prev_close\",\n",
+    "    \"open_price\",\n",
+    "    \"low_price\",\n",
+    "    \"last_price\",\n",
+    "    \"close_price\",\n",
+    "    \"average_price\",\n",
+    "]\n",
+    "X = data[features]\n",
     "X"
    ]
   },
@@ -231,7 +238,7 @@
    "outputs": [],
    "source": [
     "# Target variable\n",
-    "y=data.high_price\n",
+    "y = data.high_price\n",
     "y"
    ]
   },
@@ -247,7 +254,8 @@
     "# run this script.\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "train_X,val_X,train_y,val_y=train_test_split(X,y,test_size=0.2,random_state=0)"
+    "\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
   },
   {
@@ -257,10 +265,11 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "# Define model\n",
-    "model=LinearRegression()\n",
+    "model = LinearRegression()\n",
     "# Fit model\n",
-    "model.fit(train_X,train_y)"
+    "model.fit(train_X, train_y)"
    ]
   },
   {
@@ -270,7 +279,7 @@
    "outputs": [],
    "source": [
     "# We use .score method to get an idea of quality of our model\n",
-    "model.score(val_X,val_y)"
+    "model.score(val_X, val_y)"
    ]
   },
   {
@@ -297,9 +306,10 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
     "# Get predicted prices of stock on validation data\n",
-    "pred_y=model.predict(val_X)\n",
-    "mean_absolute_error(val_y,pred_y)"
+    "pred_y = model.predict(val_X)\n",
+    "mean_absolute_error(val_y, pred_y)"
    ]
   }
  ],
