--- a/machine_learning/Movie_recommendation_system/Movie_Recommendation_System.ipynb
+++ b/machine_learning/Movie_recommendation_system/Movie_Recommendation_System.ipynb
@@ -102,7 +102,7 @@
    ],
    "source": [
     "movie_file = \"data\\movie_dataset\\movies.csv\"\n",
-    "movie_data = pd.read_csv(movie_file, usecols = [0, 1])\n",
+    "movie_data = pd.read_csv(movie_file, usecols=[0, 1])\n",
     "movie_data.head()"
    ]
   },
@@ -188,7 +188,7 @@
    ],
    "source": [
     "ratings_file = \"data\\\\movie_dataset\\\\ratings.csv\"\n",
-    "ratings_info = pd.read_csv(ratings_file, usecols = [0, 1, 2])\n",
+    "ratings_info = pd.read_csv(ratings_file, usecols=[0, 1, 2])\n",
     "ratings_info.head()"
    ]
   },
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "movie_info = pd.merge(movie_data, ratings_info, left_on = 'movieId', right_on = 'movieId')\n",
+    "movie_info = pd.merge(movie_data, ratings_info, left_on=\"movieId\", right_on=\"movieId\")\n",
     "movie_info.head()"
    ]
   },
@@ -375,7 +375,7 @@
     }
    ],
    "source": [
-    "movie_info.loc[0:10, ['userId']]\n",
+    "movie_info.loc[0:10, [\"userId\"]]\n",
     "movie_info[movie_info.title == \"Toy Story (1995)\"].head()"
    ]
   },
@@ -466,7 +466,9 @@
     }
    ],
    "source": [
-    "movie_info = pd.DataFrame.sort_values(movie_info, ['userId', 'movieId'], ascending = [0, 1])\n",
+    "movie_info = pd.DataFrame.sort_values(\n",
+    "    movie_info, [\"userId\", \"movieId\"], ascending=[0, 1]\n",
+    ")\n",
     "movie_info.head()"
    ]
   },
@@ -583,14 +585,14 @@
     "def fav_movies(current_user, N):\n",
     "    # get rows corresponding to current user and then sort by rating in descending order\n",
     "    # pick top N rows of the dataframe\n",
-    "    fav_movies = pd.DataFrame.sort_values(movie_info[movie_info.userId == current_user], \n",
-    "                                          ['rating'], ascending = [0]) [:N]\n",
+    "    fav_movies = pd.DataFrame.sort_values(\n",
+    "        movie_info[movie_info.userId == current_user], [\"rating\"], ascending=[0]\n",
+    "    )[:N]\n",
     "    # return list of titles\n",
     "    return list(fav_movies.title)\n",
     "\n",
-    "print(fav_movies(5, 3))\n",
-    "    \n",
-    "    "
+    "\n",
+    "print(fav_movies(5, 3))"
    ]
   },
   {
@@ -840,7 +842,9 @@
     }
    ],
    "source": [
-    "user_movie_rating_matrix = pd.pivot_table(movie_info, values = 'rating', index=['userId'], columns=['movieId'])\n",
+    "user_movie_rating_matrix = pd.pivot_table(\n",
+    "    movie_info, values=\"rating\", index=[\"userId\"], columns=[\"movieId\"]\n",
+    ")\n",
     "user_movie_rating_matrix.head()"
    ]
   },
@@ -859,16 +863,18 @@
    "source": [
     "from scipy.spatial.distance import correlation\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
     "def similarity(user1, user2):\n",
     "    # normalizing user1 rating i.e mean rating of user1 for any movie\n",
-    "    # nanmean will return mean of an array after ignore NaN values \n",
-    "    user1 = np.array(user1) - np.nanmean(user1) \n",
+    "    # nanmean will return mean of an array after ignore NaN values\n",
+    "    user1 = np.array(user1) - np.nanmean(user1)\n",
     "    user2 = np.array(user2) - np.nanmean(user2)\n",
-    "    \n",
+    "\n",
     "    # finding the similarity between 2 users\n",
     "    # finding subset of movies rated by both the users\n",
     "    common_movie_ids = [i for i in range(len(user1)) if user1[i] > 0 and user2[i] > 0]\n",
-    "    if(len(common_movie_ids) == 0):\n",
+    "    if len(common_movie_ids) == 0:\n",
     "        return 0\n",
     "    else:\n",
     "        user1 = np.array([user1[i] for i in common_movie_ids])\n",
@@ -890,27 +896,33 @@
    "outputs": [],
    "source": [
     "# nearest_neighbour_ratings function will find the k nearest neighbours of the current user and\n",
-    "# then use their ratings to predict the current users ratings for other unrated movies \n",
+    "# then use their ratings to predict the current users ratings for other unrated movies\n",
+    "\n",
     "\n",
     "def nearest_neighbour_ratings(current_user, K):\n",
     "    # Creating an empty matrix whose row index is userId and the value\n",
     "    # will be the similarity of that user to the current user\n",
-    "    similarity_matrix = pd.DataFrame(index = user_movie_rating_matrix.index, \n",
-    "                                    columns = ['similarity'])\n",
+    "    similarity_matrix = pd.DataFrame(\n",
+    "        index=user_movie_rating_matrix.index, columns=[\"similarity\"]\n",
+    "    )\n",
     "    for i in user_movie_rating_matrix.index:\n",
     "        # finding the similarity between user i and the current user and add it to the similarity matrix\n",
-    "        similarity_matrix.loc[i] = similarity(user_movie_rating_matrix.loc[current_user],\n",
-    "                                             user_movie_rating_matrix.loc[i])\n",
+    "        similarity_matrix.loc[i] = similarity(\n",
+    "            user_movie_rating_matrix.loc[current_user], user_movie_rating_matrix.loc[i]\n",
+    "        )\n",
     "    # Sorting the similarity matrix in descending order\n",
-    "    similarity_matrix = pd.DataFrame.sort_values(similarity_matrix,\n",
-    "                                                ['similarity'], ascending= [0])\n",
+    "    similarity_matrix = pd.DataFrame.sort_values(\n",
+    "        similarity_matrix, [\"similarity\"], ascending=[0]\n",
+    "    )\n",
     "    # now we will pick the top k nearest neighbou\n",
     "    nearest_neighbours = similarity_matrix[:K]\n",
     "\n",
     "    neighbour_movie_ratings = user_movie_rating_matrix.loc[nearest_neighbours.index]\n",
     "\n",
     "    # This is empty dataframe placeholder for predicting the rating of current user using neighbour movie ratings\n",
-    "    predicted_movie_rating = pd.DataFrame(index = user_movie_rating_matrix.columns, columns = ['rating'])\n",
+    "    predicted_movie_rating = pd.DataFrame(\n",
+    "        index=user_movie_rating_matrix.columns, columns=[\"rating\"]\n",
+    "    )\n",
     "\n",
     "    # Iterating all movies for a current user\n",
     "    for i in user_movie_rating_matrix.columns:\n",
@@ -919,11 +931,16 @@
     "\n",
     "        for j in neighbour_movie_ratings.index:\n",
     "            # if user j has rated the ith movie\n",
-    "            if(user_movie_rating_matrix.loc[j,i] > 0):\n",
-    "                predicted_rating += ((user_movie_rating_matrix.loc[j,i] -np.nanmean(user_movie_rating_matrix.loc[j])) *\n",
-    "                                                    nearest_neighbours.loc[j, 'similarity']) / nearest_neighbours['similarity'].sum()\n",
+    "            if user_movie_rating_matrix.loc[j, i] > 0:\n",
+    "                predicted_rating += (\n",
+    "                    (\n",
+    "                        user_movie_rating_matrix.loc[j, i]\n",
+    "                        - np.nanmean(user_movie_rating_matrix.loc[j])\n",
+    "                    )\n",
+    "                    * nearest_neighbours.loc[j, \"similarity\"]\n",
+    "                ) / nearest_neighbours[\"similarity\"].sum()\n",
     "\n",
-    "        predicted_movie_rating.loc[i, 'rating'] = predicted_rating\n",
+    "        predicted_movie_rating.loc[i, \"rating\"] = predicted_rating\n",
     "\n",
     "    return predicted_movie_rating"
    ]
@@ -943,14 +960,21 @@
    "source": [
     "def top_n_recommendations(current_user, N):\n",
     "    predicted_movie_rating = nearest_neighbour_ratings(current_user, 10)\n",
-    "    movies_already_watched = list(user_movie_rating_matrix.loc[current_user]\n",
-    "                                  .loc[user_movie_rating_matrix.loc[current_user] > 0].index)\n",
-    "    \n",
+    "    movies_already_watched = list(\n",
+    "        user_movie_rating_matrix.loc[current_user]\n",
+    "        .loc[user_movie_rating_matrix.loc[current_user] > 0]\n",
+    "        .index\n",
+    "    )\n",
+    "\n",
     "    predicted_movie_rating = predicted_movie_rating.drop(movies_already_watched)\n",
-    "    \n",
-    "    top_n_recommendations = pd.DataFrame.sort_values(predicted_movie_rating, ['rating'], ascending=[0])[:N]\n",
-    "    \n",
-    "    top_n_recommendation_titles = movie_data.loc[movie_data.movieId.isin(top_n_recommendations.index)]\n",
+    "\n",
+    "    top_n_recommendations = pd.DataFrame.sort_values(\n",
+    "        predicted_movie_rating, [\"rating\"], ascending=[0]\n",
+    "    )[:N]\n",
+    "\n",
+    "    top_n_recommendation_titles = movie_data.loc[\n",
+    "        movie_data.movieId.isin(top_n_recommendations.index)\n",
+    "    ]\n",
     "\n",
     "    return list(top_n_recommendation_titles.title)"
    ]
@@ -988,8 +1012,12 @@
    ],
    "source": [
     "current_user = 140\n",
-    "print(\"User's favorite movies are : \", fav_movies(current_user, 5),\n",
-    "      \"\\nUser's top recommendations are: \", top_n_recommendations(current_user, 3))"
+    "print(\n",
+    "    \"User's favorite movies are : \",\n",
+    "    fav_movies(current_user, 5),\n",
+    "    \"\\nUser's top recommendations are: \",\n",
+    "    top_n_recommendations(current_user, 3),\n",
+    ")"
    ]
   },
   {
