--- a/machine_learning/random_forest_classification/random_forest_classifier.ipynb
+++ b/machine_learning/random_forest_classification/random_forest_classifier.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "# Importing the dataset\n",
-    "dataset = pd.read_csv('Social_Network_Ads.csv')\n",
+    "dataset = pd.read_csv(\"Social_Network_Ads.csv\")\n",
     "X = dataset.iloc[:, [2, 3]].values\n",
     "y = dataset.iloc[:, 4].values"
    ]
@@ -49,7 +49,9 @@
    "outputs": [],
    "source": [
     "# Splitting the dataset into the Training set and Test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.25, random_state=0\n",
+    ")"
    ]
   },
   {
@@ -90,8 +92,10 @@
    "source": [
     "# Fitting classifier to the Training set\n",
     "# Create your classifier here\n",
-    "classifier = RandomForestClassifier(n_estimators=10,criterion='entropy',random_state=0)\n",
-    "classifier.fit(X_train,y_train)\n",
+    "classifier = RandomForestClassifier(\n",
+    "    n_estimators=10, criterion=\"entropy\", random_state=0\n",
+    ")\n",
+    "classifier.fit(X_train, y_train)\n",
     "# Predicting the Test set results\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
@@ -129,35 +133,57 @@
    "source": [
     "# Visualising the Training set results\n",
     "X_set, y_set = X_train, y_train\n",
-    "X1, X2 = np.meshgrid(np.arange(start = X_set[:, 0].min() - 1, stop = X_set[:, 0].max() + 1, step = 0.01),\n",
-    "                     np.arange(start = X_set[:, 1].min() - 1, stop = X_set[:, 1].max() + 1, step = 0.01))\n",
-    "plt.contourf(X1, X2, classifier.predict(np.array([X1.ravel(), X2.ravel()]).T).reshape(X1.shape),\n",
-    "             alpha = 0.75, cmap = ListedColormap(('red', 'green')))\n",
+    "X1, X2 = np.meshgrid(\n",
+    "    np.arange(start=X_set[:, 0].min() - 1, stop=X_set[:, 0].max() + 1, step=0.01),\n",
+    "    np.arange(start=X_set[:, 1].min() - 1, stop=X_set[:, 1].max() + 1, step=0.01),\n",
+    ")\n",
+    "plt.contourf(\n",
+    "    X1,\n",
+    "    X2,\n",
+    "    classifier.predict(np.array([X1.ravel(), X2.ravel()]).T).reshape(X1.shape),\n",
+    "    alpha=0.75,\n",
+    "    cmap=ListedColormap((\"red\", \"green\")),\n",
+    ")\n",
     "plt.xlim(X1.min(), X1.max())\n",
     "plt.ylim(X2.min(), X2.max())\n",
     "for i, j in enumerate(np.unique(y_set)):\n",
-    "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1],\n",
-    "                c = ListedColormap(('red', 'green'))(i), label = j)\n",
-    "plt.title('Random Forest Classifier (Training set)')\n",
-    "plt.xlabel('Age')\n",
-    "plt.ylabel('Estimated Salary')\n",
+    "    plt.scatter(\n",
+    "        X_set[y_set == j, 0],\n",
+    "        X_set[y_set == j, 1],\n",
+    "        c=ListedColormap((\"red\", \"green\"))(i),\n",
+    "        label=j,\n",
+    "    )\n",
+    "plt.title(\"Random Forest Classifier (Training set)\")\n",
+    "plt.xlabel(\"Age\")\n",
+    "plt.ylabel(\"Estimated Salary\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
     "# Visualising the Test set results\n",
     "X_set, y_set = X_test, y_test\n",
-    "X1, X2 = np.meshgrid(np.arange(start = X_set[:, 0].min() - 1, stop = X_set[:, 0].max() + 1, step = 0.01),\n",
-    "                     np.arange(start = X_set[:, 1].min() - 1, stop = X_set[:, 1].max() + 1, step = 0.01))\n",
-    "plt.contourf(X1, X2, classifier.predict(np.array([X1.ravel(), X2.ravel()]).T).reshape(X1.shape),\n",
-    "             alpha = 0.75, cmap = ListedColormap(('red', 'green')))\n",
+    "X1, X2 = np.meshgrid(\n",
+    "    np.arange(start=X_set[:, 0].min() - 1, stop=X_set[:, 0].max() + 1, step=0.01),\n",
+    "    np.arange(start=X_set[:, 1].min() - 1, stop=X_set[:, 1].max() + 1, step=0.01),\n",
+    ")\n",
+    "plt.contourf(\n",
+    "    X1,\n",
+    "    X2,\n",
+    "    classifier.predict(np.array([X1.ravel(), X2.ravel()]).T).reshape(X1.shape),\n",
+    "    alpha=0.75,\n",
+    "    cmap=ListedColormap((\"red\", \"green\")),\n",
+    ")\n",
     "plt.xlim(X1.min(), X1.max())\n",
     "plt.ylim(X2.min(), X2.max())\n",
     "for i, j in enumerate(np.unique(y_set)):\n",
-    "    plt.scatter(X_set[y_set == j, 0], X_set[y_set == j, 1],\n",
-    "                c = ListedColormap(('red', 'green'))(i), label = j)\n",
-    "plt.title('Random Forest Classifier (Test set)')\n",
-    "plt.xlabel('Age')\n",
-    "plt.ylabel('Estimated Salary')\n",
+    "    plt.scatter(\n",
+    "        X_set[y_set == j, 0],\n",
+    "        X_set[y_set == j, 1],\n",
+    "        c=ListedColormap((\"red\", \"green\"))(i),\n",
+    "        label=j,\n",
+    "    )\n",
+    "plt.title(\"Random Forest Classifier (Test set)\")\n",
+    "plt.xlabel(\"Age\")\n",
+    "plt.ylabel(\"Estimated Salary\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
