--- a/numerical_methods/the_Simpson’s_method.ipynb
+++ b/numerical_methods/the_Simpson’s_method.ipynb
@@ -20,20 +20,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math \n",
+    "import math\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def simpsone(a, b, n, func):\n",
-    "    h = float((b-a)/n)\n",
+    "    h = float((b - a) / n)\n",
     "    s = (func(a) + func(b)) * 0.5\n",
-    "    for i in np.arange(0, n-1):\n",
-    "        xk = a + h*i\n",
-    "        xk1 = a + h*(i-1)\n",
-    "        s = s + func(xk) + 2*func((xk1+xk)/2)\n",
-    "    x = a + h*n\n",
-    "    x1 = a + h*(n-1)\n",
-    "    s += 2 *func((x1 + x)/2)\n",
-    "    return s*h/3.0"
+    "    for i in np.arange(0, n - 1):\n",
+    "        xk = a + h * i\n",
+    "        xk1 = a + h * (i - 1)\n",
+    "        s = s + func(xk) + 2 * func((xk1 + xk) / 2)\n",
+    "    x = a + h * n\n",
+    "    x1 = a + h * (n - 1)\n",
+    "    s += 2 * func((x1 + x) / 2)\n",
+    "    return s * h / 3.0"
    ]
   },
   {
@@ -57,9 +58,9 @@
     }
    ],
    "source": [
-    "f = lambda x: (math.e**x / 2)*(math.cos(x)-math.sin(x))\n",
+    "f = lambda x: (math.e ** x / 2) * (math.cos(x) - math.sin(x))\n",
     "\n",
-    "n = 10000  \n",
+    "n = 10000\n",
     "a = 2.0\n",
     "b = 3.0\n",
     "\n",
