--- a/other/Simplex_standard.ipynb
+++ b/other/Simplex_standard.ipynb
@@ -51,11 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_vars = None # 3 here\n",
-    "cost_vector = None #[20 10 15]\n",
-    "num_consts = None # 4\n",
-    "A = None #[[3 2 5],[2 1 1], [1 1 3],[5 2 4]]\n",
-    "b = None #[55 26 30 57]"
+    "num_vars = None  # 3 here\n",
+    "cost_vector = None  # [20 10 15]\n",
+    "num_consts = None  # 4\n",
+    "A = None  # [[3 2 5],[2 1 1], [1 1 3],[5 2 4]]\n",
+    "b = None  # [55 26 30 57]"
    ]
   },
   {
@@ -87,31 +87,31 @@
    ],
    "source": [
     "print(\"Enter the Linear programming data in standard form: \")\n",
-    "num_vars = int(input('Number of variables: '))\n",
+    "num_vars = int(input(\"Number of variables: \"))\n",
     "\n",
-    "cost_vector = input('Coefficients of the decision variables in cost function: ')\n",
-    "cost_vector = cost_vector.split(' ')\n",
+    "cost_vector = input(\"Coefficients of the decision variables in cost function: \")\n",
+    "cost_vector = cost_vector.split(\" \")\n",
     "cost_vector = [int(i) for i in cost_vector]\n",
     "cost_vector = np.array(cost_vector)\n",
     "\n",
-    "num_consts = int(input('Number of constraints: '))\n",
+    "num_consts = int(input(\"Number of constraints: \"))\n",
     "print(\"Inequality constraints data: \")\n",
     "\n",
-    "print('Enter the matrix of coefficients: ')\n",
+    "print(\"Enter the matrix of coefficients: \")\n",
     "\n",
-    "A = np.zeros((num_consts,num_vars))\n",
+    "A = np.zeros((num_consts, num_vars))\n",
     "\n",
     "for i in range(num_consts):\n",
-    "    print(\"Constraint: \"+str(i+1))\n",
+    "    print(\"Constraint: \" + str(i + 1))\n",
     "    x = input(\"Coefficients: \")\n",
-    "    x = x.split(' ')\n",
+    "    x = x.split(\" \")\n",
     "    x = [float(k) for k in x]\n",
     "    for j in range(num_vars):\n",
     "        A[i][j] = x[j]\n",
     "\n",
     "\n",
     "b = input(\"Enter the RHS: \")\n",
-    "b = b.split(' ')\n",
+    "b = b.split(\" \")\n",
     "b = [float(k) for k in b]"
    ]
   },
@@ -153,34 +153,32 @@
     "num_ge = 0\n",
     "\n",
     "\n",
-    "\n",
     "v_slack = []\n",
-    "A_slacks = np.zeros((num_consts,num_consts))\n",
+    "A_slacks = np.zeros((num_consts, num_consts))\n",
     "v_artificial = []\n",
-    "A_surplus = np.zeros((num_consts,num_ge))\n",
+    "A_surplus = np.zeros((num_consts, num_ge))\n",
     "v_bounds = []\n",
     "\n",
     "\n",
+    "for i in range(num_consts):\n",
+    "    s = \"<=\"\n",
     "\n",
-    "for i in  range(num_consts):\n",
-    "    s = '<='\n",
-    "\n",
-    "    if s=='<=':\n",
+    "    if s == \"<=\":\n",
     "        v_slack.append(b[i])\n",
-    "        A_slacks[i][len(v_slack)-1] = 1\n",
-    "    elif s=='>=':\n",
+    "        A_slacks[i][len(v_slack) - 1] = 1\n",
+    "    elif s == \">=\":\n",
     "        v_slack.append(0)\n",
-    "        A_slacks[i][len(v_slack)-1] = -1\n",
+    "        A_slacks[i][len(v_slack) - 1] = -1\n",
     "        v_artificial.append(b[i])\n",
-    "        A_surplus[i][len(v_artificial)-1] = 1\n",
+    "        A_surplus[i][len(v_artificial) - 1] = 1\n",
     "    else:\n",
     "        v_artificial.append(b[i])\n",
-    "        A_surplus[i][len(v_artificial)-1] = 1\n",
-    "    \n",
+    "        A_surplus[i][len(v_artificial) - 1] = 1\n",
+    "\n",
     "    v_bounds.append(b[i])\n",
     "\n",
     "\n",
-    "A = np.hstack([A,A_slacks,A_surplus])\n",
+    "A = np.hstack([A, A_slacks, A_surplus])\n",
     "\n",
     "vari = []\n",
     "vari_ar = []\n",
@@ -188,15 +186,15 @@
     "vari_nb = []\n",
     "\n",
     "variables = []\n",
-    "for i in  range(len(A[0])):\n",
-    "    variables.append('x'+str(i+1))\n",
-    "    vari.append('x'+str(i+1))\n",
+    "for i in range(len(A[0])):\n",
+    "    variables.append(\"x\" + str(i + 1))\n",
+    "    vari.append(\"x\" + str(i + 1))\n",
     "    if i < num_vars:\n",
-    "        vari_nb.append('x'+str(i+1))\n",
-    "    elif i< num_vars + len(v_slack):\n",
-    "        vari_slack.append('x'+str(i+1))\n",
+    "        vari_nb.append(\"x\" + str(i + 1))\n",
+    "    elif i < num_vars + len(v_slack):\n",
+    "        vari_slack.append(\"x\" + str(i + 1))\n",
     "    else:\n",
-    "        vari_ar.append('x'+str(i+1))\n",
+    "        vari_ar.append(\"x\" + str(i + 1))\n",
     "\n",
     "all_vars = {}"
    ]
@@ -207,36 +205,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_a = 0*cost_vector\n",
+    "v_a = 0 * cost_vector\n",
     "v_ar = None\n",
     "\n",
-    "x = np.hstack([v_a,v_slack,v_artificial])\n",
+    "x = np.hstack([v_a, v_slack, v_artificial])\n",
     "\n",
-    "for v,val in zip(variables,x):\n",
+    "for v, val in zip(variables, x):\n",
     "    all_vars[v] = val\n",
     "\n",
     "\n",
-    "if len(v_artificial)==0:\n",
+    "if len(v_artificial) == 0:\n",
     "    v_ar = []\n",
     "else:\n",
     "    if type_problem == 1:\n",
-    "        v_ar = -9999*np.ones(len(v_artificial))\n",
+    "        v_ar = -9999 * np.ones(len(v_artificial))\n",
     "    else:\n",
-    "        v_ar = 9999*np.ones(len(v_artificial))\n",
+    "        v_ar = 9999 * np.ones(len(v_artificial))\n",
     "\n",
-    "Cj = np.hstack([cost_vector,0*np.array(v_slack),v_ar])\n",
+    "Cj = np.hstack([cost_vector, 0 * np.array(v_slack), v_ar])\n",
     "Ci = []\n",
     "tab1 = []\n",
     "Vb = []\n",
     "Q = v_bounds\n",
     "\n",
     "struct2_curr_values = np.zeros(len(Q))\n",
-    "struct2_var_base = ['' for _ in range(len(Q))]\n",
+    "struct2_var_base = [\"\" for _ in range(len(Q))]\n",
     "\n",
     "for i in range(len(Q)):\n",
-    "    tab1.append('|')\n",
+    "    tab1.append(\"|\")\n",
     "    struct2_curr_values = Q[i]\n",
-    "    ind = np.where(x==Q[i])\n",
+    "    ind = np.where(x == Q[i])\n",
     "    ind = ind[0]\n",
     "    ind = ind[0]\n",
     "\n",
@@ -253,11 +251,11 @@
    "source": [
     "Ci = np.array(Ci)\n",
     "\n",
-    "Z = sum(np.multiply(Ci,Q))\n",
+    "Z = sum(np.multiply(Ci, Q))\n",
     "Zj = np.zeros(len(Cj))\n",
     "\n",
     "for i in range(len(Cj)):\n",
-    "    Zj[i] = sum(np.multiply(Ci,A[:,i])) \n",
+    "    Zj[i] = sum(np.multiply(Ci, A[:, i]))\n",
     "vars_at_moment = struct2_var_base.copy()"
    ]
   },
@@ -268,9 +266,9 @@
    "outputs": [],
    "source": [
     "def get_row(vec):\n",
-    "    k = ''\n",
+    "    k = \"\"\n",
     "    for i in vec:\n",
-    "        k+= '{0:>10}'.format(round(i,3))\n",
+    "        k += \"{0:>10}\".format(round(i, 3))\n",
     "    return k"
    ]
   },
@@ -311,27 +309,44 @@
    "source": [
     "print(\"=========LP in standard form:=========\")\n",
     "\n",
-    "print(\"variables: \",vari)\n",
-    "print(\"Activity variables: \",vari_nb)\n",
-    "print(\"Slack variables: \",vari_slack)\n",
-    "print(\"Artificial variables: \",vari_ar)\n",
+    "print(\"variables: \", vari)\n",
+    "print(\"Activity variables: \", vari_nb)\n",
+    "print(\"Slack variables: \", vari_slack)\n",
+    "print(\"Artificial variables: \", vari_ar)\n",
     "\n",
     "print(\"======Iteration: 0======\")\n",
-    "print(\"Initializing variables: \",vari)\n",
-    "print(\"Activity variables: \",[all_vars[v] for v in vari_nb])\n",
-    "print(\"Slack variables: \",vari_slack,[all_vars[v] for v in vari_slack])\n",
-    "print(\"Artificial variables: \",v_ar)\n",
-    "print('=======================================================================================================')\n",
-    "print(\"Variables:                              \",get_row(np.arange(start=1,stop=len(A[0,:])+1,step = 1 )))\n",
-    "print(\"Cj:                                     \",get_row(Cj))\n",
+    "print(\"Initializing variables: \", vari)\n",
+    "print(\"Activity variables: \", [all_vars[v] for v in vari_nb])\n",
+    "print(\"Slack variables: \", vari_slack, [all_vars[v] for v in vari_slack])\n",
+    "print(\"Artificial variables: \", v_ar)\n",
+    "print(\n",
+    "    \"=======================================================================================================\"\n",
+    ")\n",
+    "print(\n",
+    "    \"Variables:                              \",\n",
+    "    get_row(np.arange(start=1, stop=len(A[0, :]) + 1, step=1)),\n",
+    ")\n",
+    "print(\"Cj:                                     \", get_row(Cj))\n",
     "print(\"Basic        |Value       |RHS\")\n",
     "for i in range(num_consts):\n",
-    "    print('|',\"{0:>10}\".format(vars_at_moment[i]),'|',\"{0:>10}\".format(Ci[i]),'|',\"{0:>10}\".format(round(Q[i],3)),'|',get_row(A[i]),'|')\n",
+    "    print(\n",
+    "        \"|\",\n",
+    "        \"{0:>10}\".format(vars_at_moment[i]),\n",
+    "        \"|\",\n",
+    "        \"{0:>10}\".format(Ci[i]),\n",
+    "        \"|\",\n",
+    "        \"{0:>10}\".format(round(Q[i], 3)),\n",
+    "        \"|\",\n",
+    "        get_row(A[i]),\n",
+    "        \"|\",\n",
+    "    )\n",
     "\n",
-    "print('=======================================================================================================')\n",
-    "print('Zj:                                     ',get_row(Zj))\n",
-    "print('Cj-Zj:                                  ',get_row(Cj-Zj))\n",
-    "print('Z: ',round(Z,3))"
+    "print(\n",
+    "    \"=======================================================================================================\"\n",
+    ")\n",
+    "print(\"Zj:                                     \", get_row(Zj))\n",
+    "print(\"Cj-Zj:                                  \", get_row(Cj - Zj))\n",
+    "print(\"Z: \", round(Z, 3))"
    ]
   },
   {
@@ -407,86 +422,101 @@
     }
    ],
    "source": [
-    "\n",
-    "while iterNum<=10:\n",
-    "    iterNum+=1\n",
+    "while iterNum <= 10:\n",
+    "    iterNum += 1\n",
     "    type_problem = 1\n",
     "    if type_problem == 1:\n",
-    "        num = max(Cj-Zj)\n",
-    "        index = np.where((Cj-Zj)==num)\n",
+    "        num = max(Cj - Zj)\n",
+    "        index = np.where((Cj - Zj) == num)\n",
     "        index = index[0][0]\n",
     "        v_enter = variables[index]\n",
     "    else:\n",
-    "        num = min(Cj-Zj)\n",
-    "        index = np.where((Cj-Zj)==num)\n",
+    "        num = min(Cj - Zj)\n",
+    "        index = np.where((Cj - Zj) == num)\n",
     "        index = index[0][0]\n",
     "        v_enter = variables[index]\n",
-    "    \n",
-    "    b = A[:,index]\n",
+    "\n",
+    "    b = A[:, index]\n",
     "    k = -1\n",
     "    d = 10000\n",
-    "    \n",
+    "\n",
     "    for i in range(len(Q)):\n",
-    "        if b[i]>0:\n",
-    "            div = Q[i]/b[i]\n",
-    "            if d>=div:\n",
+    "        if b[i] > 0:\n",
+    "            div = Q[i] / b[i]\n",
+    "            if d >= div:\n",
     "                d = div\n",
     "                k = i\n",
     "    if k == -1:\n",
-    "        print('Solution is infinty ')\n",
+    "        print(\"Solution is infinty \")\n",
     "        break\n",
     "    else:\n",
     "        num2 = k\n",
-    "    \n",
+    "\n",
     "    v_leave = struct2_var_base[num2]\n",
     "    struct2_var_base[num2] = v_enter\n",
-    "    pivot = A[num2,index]\n",
+    "    pivot = A[num2, index]\n",
     "    Ci[num2] = Cj[index]\n",
-    "    A[num2,:] = A[num2,:]/pivot\n",
-    "    Q[num2] = Q[num2]/pivot\n",
-    "    \n",
-    "    #Row operations:\n",
-    "    \n",
+    "    A[num2, :] = A[num2, :] / pivot\n",
+    "    Q[num2] = Q[num2] / pivot\n",
+    "\n",
+    "    # Row operations:\n",
+    "\n",
     "    for i in range(num_consts):\n",
-    "        \n",
-    "        if i!= num2:\n",
-    "            Q[i] = Q[i] - A[i,index]*Q[num2]\n",
-    "            A[i,:] = A[i,:] - A[i,index]*A[num2,:]\n",
-    "    Z = sum(np.multiply(Ci,Q))\n",
-    "    for i in  range(len(A[0,:])):\n",
-    "        Zj[i] = sum(np.multiply(A[:,i],Ci))\n",
-    "    \n",
+    "\n",
+    "        if i != num2:\n",
+    "            Q[i] = Q[i] - A[i, index] * Q[num2]\n",
+    "            A[i, :] = A[i, :] - A[i, index] * A[num2, :]\n",
+    "    Z = sum(np.multiply(Ci, Q))\n",
+    "    for i in range(len(A[0, :])):\n",
+    "        Zj[i] = sum(np.multiply(A[:, i], Ci))\n",
+    "\n",
     "    vars_at_moment = []\n",
     "    for i in range(num_consts):\n",
     "        vars_at_moment.append(struct2_var_base[i])\n",
-    "    \n",
-    "    print('=====Iteration',iterNum,'=======')\n",
-    "    print('Enter: ',v_enter)\n",
-    "    print('Leave: ',v_leave)\n",
-    "    print('Pivot: ',round(pivot,3))\n",
-    "    \n",
-    "    print('========')\n",
     "\n",
-    "    print('=======================================================================================================')\n",
-    "    print(\"Variables:                              \",get_row(np.arange(start=1,stop=len(A[0,:])+1,step = 1 )))\n",
-    "    print(\"Cj:                                     \",get_row(Cj))\n",
+    "    print(\"=====Iteration\", iterNum, \"=======\")\n",
+    "    print(\"Enter: \", v_enter)\n",
+    "    print(\"Leave: \", v_leave)\n",
+    "    print(\"Pivot: \", round(pivot, 3))\n",
+    "\n",
+    "    print(\"========\")\n",
+    "\n",
+    "    print(\n",
+    "        \"=======================================================================================================\"\n",
+    "    )\n",
+    "    print(\n",
+    "        \"Variables:                              \",\n",
+    "        get_row(np.arange(start=1, stop=len(A[0, :]) + 1, step=1)),\n",
+    "    )\n",
+    "    print(\"Cj:                                     \", get_row(Cj))\n",
     "    print(\"Basic        |Value       |RHS\")\n",
     "    for i in range(num_consts):\n",
-    "        print('|',\"{0:>10}\".format(vars_at_moment[i]),'|',\"{0:>10}\".format(Ci[i]),'|',\"{0:>10}\".format(round(Q[i],3)),'|',get_row(A[i]),'|')\n",
+    "        print(\n",
+    "            \"|\",\n",
+    "            \"{0:>10}\".format(vars_at_moment[i]),\n",
+    "            \"|\",\n",
+    "            \"{0:>10}\".format(Ci[i]),\n",
+    "            \"|\",\n",
+    "            \"{0:>10}\".format(round(Q[i], 3)),\n",
+    "            \"|\",\n",
+    "            get_row(A[i]),\n",
+    "            \"|\",\n",
+    "        )\n",
     "\n",
-    "    print('=======================================================================================================')\n",
-    "    print('Zj:                                     ',get_row(Zj))\n",
-    "    print('Cj-Zj:                                  ',get_row(Cj-Zj))\n",
-    "    print('Z: ',round(Z,3))\n",
-    "    if type_problem ==1:\n",
-    "        temp = max(Cj-Zj)\n",
-    "        if temp<=0:\n",
+    "    print(\n",
+    "        \"=======================================================================================================\"\n",
+    "    )\n",
+    "    print(\"Zj:                                     \", get_row(Zj))\n",
+    "    print(\"Cj-Zj:                                  \", get_row(Cj - Zj))\n",
+    "    print(\"Z: \", round(Z, 3))\n",
+    "    if type_problem == 1:\n",
+    "        temp = max(Cj - Zj)\n",
+    "        if temp <= 0:\n",
     "            break\n",
     "    else:\n",
-    "        temp = min(Cj-Zj)\n",
-    "        if temp>=0:\n",
-    "            break\n",
-    "    "
+    "        temp = min(Cj - Zj)\n",
+    "        if temp >= 0:\n",
+    "            break"
    ]
   },
   {
